초기화 및 개발 변경으로

--- a/docs/annual_reports/year1/Q2.md
+++ b/docs/annual_reports/year1/Q2.md
@@ -1,140 +1,171 @@
 # 애니메이션 파일 정리 애플리케이션 - 1년차 2분기 개발 계획
 
 ## 개발 목표
-1년차 2분기는 기본 프로젝트 구조를 확립하고 초기 프로토타입 개발에 집중합니다. 특히 확장 가능한 플러그인 아키텍처의 기반을 마련하여 다양한 메타데이터 소스 및 외부 서비스를 유연하게 활용할 수 있도록 합니다.
+1년차 2분기는 기본 프로젝트 구조를 확립하고 초기 프로토타입 개발에 집중합니다. 특히 확장 가능한 플러그인 아키텍처의 기반을 마련하여 다양한 메타데이터 소스 및 외부 서비스를 유연하게 활용할 수 있도록 합니다. **또한 데이터베이스 중심의 데이터 관리 전략을 구체화하여 모든 설정, 메타데이터, 플러그인 데이터를 일관된 방식으로 데이터베이스에 저장하는 구조를 구현합니다.**
 
 > **중요**: 모든 개발 단계에서 변경사항 적용 후 프로그램을 실행하여 기능이 정상적으로 작동하는지 확인해야 합니다. 어떤 변경이든 전체 시스템 안정성을 훼손해서는 안 됩니다.
 
 ## 주요 작업 항목
 
 ### 기본 프로젝트 구조 확립
-- [x] 폴더 구조 및 모듈화 설계 구현
+- [ ] 폴더 구조 및 모듈화 설계 구현
   - 핵심 모듈 분리 (core, ui, data, api, utils)
   - 플러그인 모듈 구조 설계 (plugins)
   - 패키지 초기화 파일 구성
   - 설정 파일 관리 구조 설계
-- [x] 버전 관리 시스템 설정 및 초기화
+  - **데이터베이스 액세스 레이어 구조 설계**
+- [ ] 버전 관리 시스템 설정 및 초기화
   - Git 저장소 설정
   - .gitignore 파일 구성
   - 브랜칭 전략 및 워크플로우 정의
-- [x] 개발 환경 구성 및 필수 라이브러리 설치
+- [ ] 개발 환경 구성 및 필수 라이브러리 설치
   - 가상 환경 설정
   - requirements.txt 파일 작성
   - 개발/테스트/배포 환경 분리
-- [x] 코딩 스타일 가이드 및 규칙 수립
+  - **SQLite 및 SQLAlchemy 설정**
+- [ ] 코딩 스타일 가이드 및 규칙 수립
   - PEP8 스타일 가이드 채택
   - 문서화 규칙 (docstring 형식)
   - 코드 리뷰 체크리스트 작성
+  - **데이터베이스 코드 작성 규칙 정의**
 
 ### 플러그인 시스템 기초 설계
-- [x] 플러그인 기본 아키텍처 정의
+- [ ] 플러그인 기본 아키텍처 정의
   - 플러그인 인터페이스 초안 작성
   - 플러그인 생명주기 관리 방안
   - 플러그인 간 의존성 처리 설계
   - 플러그인 설정 구조 정의
-- [x] 플러그인 검색 및 로딩 메커니즘 설계
+  - **데이터베이스 기반 플러그인 설정 저장 구현**
+- [ ] 플러그인 검색 및 로딩 메커니즘 설계
   - 동적 플러그인 검색 알고리즘
   - 플러그인 메타데이터 형식 정의
   - 플러그인 호환성 검사 로직
   - 초기화 순서 관리 방안
-- [x] 샘플 플러그인 구조 구현
+  - **플러그인 상태 데이터베이스 저장**
+- [ ] 샘플 플러그인 구조 구현
   - 기본 플러그인 템플릿 작성
   - 플러그인 등록 메커니즘 검증
   - 샘플 설정 페이지 구현
   - 에러 처리 예시 작성
+  - **플러그인 데이터 테이블 예시 구현**
 
 ### 데이터베이스 스키마 설계
-- [x] 핵심 엔티티 정의 (시리즈, 에피소드, 파일, 시청 기록 등)
+- [ ] 핵심 엔티티 정의 (시리즈, 에피소드, 파일, 시청 기록 등)
   - Series 모델 상세 명세
   - Episode 모델 상세 명세
   - File 모델 상세 명세
   - WatchHistory 모델 상세 명세
   - 메타데이터 관련 모델 상세 명세
-- [x] 관계 모델링 및 ERD 작성
+  - **설정 및 환경설정 모델 상세 명세**
+- [ ] 관계 모델링 및 ERD 작성
   - 모델 간 관계 정의 (일대다, 다대다 등)
   - 인덱싱 전략 수립
   - 무결성 제약 조건 정의
-- [x] SQLite 데이터베이스 초기화 스크립트 작성
+  - **메타데이터 소스별 모델링 방안**
+- [ ] SQLite 데이터베이스 초기화 스크립트 작성
   - 스키마 생성 스크립트
   - 기본 데이터 삽입 스크립트
   - 업그레이드 경로 정의
-- [x] SQLAlchemy ORM 모델 클래스 설계
+  - **애플리케이션 설정 초기화 스크립트**
+- [ ] SQLAlchemy ORM 모델 클래스 설계
   - Base 클래스 정의
   - 모델별 ORM 클래스 구현
   - 관계 속성 정의
   - 유틸리티 메서드 구현
+  - **설정 테이블 ORM 정의 및 관리 클래스 구현**
+- [ ] 통합 데이터 관리 레이어 구현
+  - 설정 관리 인터페이스 정의
+  - 트랜잭션 처리 및 롤백 메커니즘
+  - 데이터 캐싱 전략 구현
+  - 마이그레이션 관리 유틸리티 개발
+  - 플러그인별 데이터 격리 메커니즘
 
 ### ED2K 해시 계산 알고리즘 프로토타입 개발
-- [x] 기본 해시 계산 함수 구현
+- [ ] 기본 해시 계산 함수 구현
   - ED2K 해시 알고리즘 코어 구현
   - 입력 검증 및 예외 처리
   - 메모리 효율적인 청크 처리
-- [x] 대용량 파일 처리 최적화
+  - **해시 결과 데이터베이스 저장 구조**
+- [ ] 대용량 파일 처리 최적화
   - 청크 기반 파일 읽기 구현
   - 버퍼 크기 최적화
   - I/O 병목현상 최소화 전략
-- [x] 멀티스레딩 구현을 통한 성능 향상
+  - **진행 상황 데이터베이스 기록**
+- [ ] 멀티스레딩 구현을 통한 성능 향상
   - 스레드 풀 구현
   - 청크별 병렬 처리 로직
   - 결과 병합 메커니즘
-- [x] 해시 계산 진행 상황 모니터링 기능
+  - **스레드 안전한 데이터베이스 접근**
+- [ ] 해시 계산 진행 상황 모니터링 기능
   - 진행률 계산 알고리즘
   - 콜백 인터페이스 설계
   - 취소 메커니즘 구현
+  - **작업 진행 상태 데이터베이스 기록**
 
 ### TMDB API 연동 설계 (첫 번째 메타데이터 플러그인)
-- [x] TMDB API 문서 분석 및 요구사항 정리
+- [ ] TMDB API 문서 분석 및 요구사항 정리
   - 주요 API 엔드포인트 정리
   - 요청/응답 포맷 문서화
   - 에러 코드 및 처리 방법 정의
-- [x] 클라이언트 인증 메커니즘 설계
+  - **API 응답 데이터베이스 스키마 설계**
+- [ ] 클라이언트 인증 메커니즘 설계
   - API 키 관리 프로세스 구현
   - 인증 및 권한 관리 로직
   - 재인증 메커니즘
-- [x] 기본 API 통신 클래스 구현 (연결, 인증, 요청, 응답 처리)
+  - **API 인증 정보 데이터베이스 저장 방식**
+- [ ] 기본 API 통신 클래스 구현 (연결, 인증, 요청, 응답 처리)
   - HTTP 통신 래퍼 클래스
   - 요청 형식 생성기
   - 응답 파서
   - 타임아웃 및 재시도 메커니즘
-- [x] 세션 관리 및 Rate Limit 관리 로직 설계
+  - **API 응답 캐싱 데이터베이스 구현**
+- [ ] 세션 관리 및 Rate Limit 관리 로직 설계
   - 요청 큐 구현
   - 요청 간격 제어 메커니즘
   - 백오프 전략 구현
   - 세션 만료 처리
-- [x] 플러그인 형태로 TMDB 클라이언트 초기 구현
+  - **요청 이력 및 통계 데이터베이스 기록**
+- [ ] 플러그인 형태로 TMDB 클라이언트 초기 구현
   - 기본 플러그인 인터페이스 적용
   - 설정 페이지 프로토타입 작성
   - 플러그인 활성화/비활성화 처리
   - 메타데이터 변환 인터페이스 구현
+  - **메타데이터 저장 및 조회 데이터베이스 조작**
 
 ### 기본 GUI 프레임워크 초기 설계
-- [x] PySide6 기본 윈도우 및 레이아웃 설계
+- [ ] PySide6 기본 윈도우 및 레이아웃 설계
   - 메인 윈도우 클래스 구현
   - 레이아웃 관리자 설계
   - 반응형 레이아웃 구현
-- [x] 핵심 UI 컴포넌트 프로토타입 구현
+  - **데이터베이스 기반 UI 상태 저장**
+- [ ] 핵심 UI 컴포넌트 프로토타입 구현
   - 파일 브라우저 컴포넌트
   - 메타데이터 표시 컴포넌트
   - 진행 상태 표시 컴포넌트
   - 설정 패널 컴포넌트
-- [x] 스타일 및 테마 기본 설정
+  - **데이터베이스 쿼리 결과 표시 위젯**
+- [ ] 스타일 및 테마 기본 설정
   - 기본 스타일시트 구현
   - 다크/라이트 모드 지원
   - 사용자 정의 테마 인프라 설계
-- [x] 기본 설정 화면 설계
+  - **테마 설정 데이터베이스 저장**
+- [ ] 기본 설정 화면 설계
   - 설정 카테고리 정의
   - 플러그인 설정 통합 프레임워크
   - 설정 저장/로드 메커니즘
   - 기본값 및 검증 로직
+  - **설정 데이터베이스 백업/복원 기능**
 
 ## 예상 결과물
 - 기본 프로젝트 구조 및 개발 환경 (폴더 구조, 가상 환경, git 설정)
 - 플러그인 시스템 기초 구조 (인터페이스 정의, 로딩 메커니즘, 샘플 구현)
 - 데이터베이스 스키마 및 ORM 모델 (완전한 ERD 및 SQLAlchemy 클래스)
+- **통합 데이터베이스 관리 레이어 (설정, 메타데이터, 플러그인 데이터 일원화)**
 - ED2K 해시 계산 프로토타입 (멀티스레딩 지원, 성능 테스트 결과)
 - TMDB API 플러그인 초기 버전 (인증, 검색, 메타데이터 조회 기능)
 - 초기 GUI 프로토타입 (기본 레이아웃 및 핵심 컴포넌트)
 - 단위 테스트 스위트 (각 모듈별 최소 80% 커버리지)
+- **데이터베이스 관리 도구 및 마이그레이션 스크립트**
 
 ## 위험 요소 및 대응 계획
 - **위험**: TMDB API 제한 및 차단 이슈
@@ -144,16 +175,19 @@
   - **대응**: 확장성 있는 인터페이스 설계, 초기 테스트 케이스 작성
   - **검증 방법**: 다양한 플러그인 시나리오 테스트, 모의 구현체 검증
 - **위험**: 데이터베이스 스키마 설계 불완전성
-  - **대응**: 변경 가능한 유연한 설계 및 마이그레이션 계획 수립
-  - **검증 방법**: 다양한 시나리오에 대한 데이터 모델링 검증
+  - **대응**: 변경 가능한 유연한 설계 및 마이그레이션 계획, 투명한 ORM 계층 구현
+  - **검증 방법**: 다양한 시나리오에 대한 데이터 모델링 검증, 마이그레이션 테스트
 - **위험**: 멀티스레딩 관련 경쟁 조건 및 동기화 문제
-  - **대응**: 스레드 안전 설계 패턴 적용 및 철저한 테스트
+  - **대응**: 스레드 안전 설계 패턴 적용 및 철저한 테스트, 데이터베이스 연결 풀 관리
   - **검증 방법**: 스트레스 테스트 및 경쟁 조건 시뮬레이션
+- **위험**: 데이터베이스 성능 및 병목 현상
+  - **대응**: 인덱스 최적화, 쿼리 튜닝, 불필요한 읽기/쓰기 최소화
+  - **검증 방법**: 대용량 데이터 환경에서 성능 테스트, 쿼리 실행 계획 분석
 
 ## 마일스톤
 - **주 3**: 프로젝트 구조 및 플러그인 시스템 기초 설계 완료
 - **주 4**: 개발 환경 설정 완료
-- **주 6**: 데이터베이스 스키마 및 ORM 모델 구현 완료
+- **주 6**: 데이터베이스 스키마 및 ORM 모델 구현 완료, 통합 데이터 관리 레이어 구현
 - **주 8**: ED2K 해시 계산 알고리즘 프로토타입 완성
 - **주 10**: TMDB API 플러그인 초기 버전 구현
 - **주 12**: 기본 GUI 프레임워크 프로토타입 완성 및 2분기 통합 테스트 
