--- a/docs/annual_reports/year1/Q3.md
+++ b/docs/annual_reports/year1/Q3.md
@@ -1,189 +1,137 @@
 # 애니메이션 파일 정리 애플리케이션 - 1년차 3분기 개발 계획
 
 ## 개발 목표
-1년차 3분기는 핵심 기능 구현 단계로 진입하여 파일 식별 및 메타데이터 수집 모듈을 구현합니다. 모든 외부 API 및 데이터 소스는 플러그인 구조로 설계하여 사용자가 필요에 따라 설정에서 쉽게 전환할 수 있도록 합니다.
+1년차 3분기는 기본 GUI 개발 시작과 초기 통합 테스트에 집중합니다. **특히 1-2분기에 구축한 데이터베이스 중심 아키텍처와 GUI 요소들의 통합을 강화하여, 모든 설정, 상태, 메타데이터가 일관되게 데이터베이스에 저장되고 로드되는 방식을 구현합니다.**
 
 > **중요**: 모든 개발 단계에서 변경사항 적용 후 프로그램을 실행하여 기능이 정상적으로 작동하는지 확인해야 합니다. 어떤 변경이든 전체 시스템 안정성을 훼손해서는 안 됩니다.
 
 ## 주요 작업 항목
 
-### 메타데이터 플러그인 기본 구조 설계
-- [ ] 메타데이터 공급자 플러그인 인터페이스 정의
-  - 추상 기본 클래스 설계
-  - 필수 구현 메서드 정의
-  - 플러그인 등록 및 검색 메커니즘
-  - 버전 호환성 관리 체계
-- [ ] 플러그인 로더 및 관리자 클래스 구현
-  - 동적 플러그인 로딩 시스템
-  - 플러그인 활성화/비활성화 메커니즘
-  - 오류 처리 및 격리 시스템
-  - 의존성 관리 기능
-- [ ] 플러그인 설정 프레임워크 구축
-  - 플러그인별 설정 UI 연동 인터페이스
-  - 설정 저장 및 로드 시스템
-  - 설정 유효성 검증 체계
-  - 기본값 관리 메커니즘
-- [ ] 플러그인 우선순위 및 폴백 시스템 구현
-  - 우선순위 기반 메타데이터 요청 처리
-  - 대체 플러그인 자동 전환 로직
-  - 결과 병합 및 충돌 해결 전략
-  - 사용자 선호도 설정 인터페이스
-
-### TMDB API 연동 완성 (첫 번째 메타데이터 플러그인)
-- [ ] TMDB REST API 클라이언트 구현 완료
-  - API 요청/응답 구조 정의
-  - 인증 및 API 키 관리 완성
-  - 요청/응답 타입별 핸들러 구현
-  - 타임아웃 및 연결 오류 처리
-- [ ] 주요 엔드포인트 지원 (인증, 검색, 영화/TV 시리즈 정보 등)
-  - 인증 메커니즘 및 API 키 관리 로직
-  - 검색 기능 구현 (영화, TV 시리즈, 시즌, 에피소드)
-  - 상세 정보 조회 기능 구현
-  - 이미지 및 포스터 조회 기능
-  - 관련 작품 및 추천 작품 조회 기능
-- [ ] 응답 파싱 및 구조화된 데이터 변환
-  - JSON 응답 파서 구현
-  - 데이터 모델로 변환 로직
-  - JSON/데이터 파싱 예외 처리
-  - 메타데이터 정규화 및 통합
-- [ ] 오류 처리 및 재시도 메커니즘 구현
-  - 오류 코드별 처리 전략
-  - 지수 백오프 재시도 로직
-  - 복구 불가능 오류 처리
-  - 사용자 피드백 메커니즘
-- [ ] 요청 제한 관리 (Rate limiting, 큐 시스템)
-  - 우선순위 기반 요청 큐
-  - 요청 간격 제어 알고리즘
-  - 배치 처리 최적화
-  - API 사용량 모니터링
-
-### 파일 식별 모듈 최적화
-- [ ] 멀티스레딩 파일 해시 계산 최적화
-  - 스레드 풀 크기 자동 조정
-  - I/O 바운드 vs CPU 바운드 작업 분리
-  - 메모리 사용량 최적화
-  - 진행 상황 보고 개선
-- [ ] 파일명 기반 보조 식별 로직 구현
-  - 패턴 인식 알고리즘 개발
-  - 시리즈명/에피소드 추출 로직
-  - 정규표현식 패턴 라이브러리
-  - 신뢰도 점수 시스템
-- [ ] 식별 결과 캐싱 및 재사용 메커니즘
-  - 파일 메타데이터 캐시 구현
-  - 캐시 무효화 조건 정의
-  - 효율적인 캐시 조회 구조
-  - 캐시 지속성 관리
-- [ ] 파일 시스템 스캔 및 감시 기능 구현
-  - 재귀적 폴더 스캔 최적화
-  - Watchdog 기반 파일 변경 감지
-  - 증분 스캔 알고리즘
-  - 스캔 제외 규칙 구현
-- [ ] 식별 결과 검증 및 충돌 해결 로직
-  - 다중 소스 식별 충돌 해결
-  - 신뢰도 기반 우선순위 결정
-  - 사용자 확인 인터페이스
-  - 자동/수동 해결 옵션
-
-### 메타데이터 수집 및 캐싱 시스템
-- [ ] 로컬 캐싱 시스템 설계 및 구현
-  - 계층형 캐시 구조 설계
-  - SQLite 기반 캐시 저장소
-  - 데이터 직렬화/역직렬화
-  - 캐시 크기 관리 메커니즘
-- [ ] 메타데이터 갱신 정책 구현 (시간 기반, 사용자 요청 기반)
-  - TTL 기반 캐시 만료
-  - 우선순위 기반 갱신 정책
-  - 사용자 트리거 갱신 옵션
-  - 백그라운드 자동 갱신 서비스
-- [ ] 캐시 데이터 인덱싱 및 검색 최적화
-  - 전문 검색(full-text search) 구현
-  - 인덱스 최적화 전략
-  - 메모리 vs 디스크 캐시 밸런싱
-  - 검색 쿼리 최적화
-- [ ] 오프라인 모드 지원 로직
-  - 필수 데이터 로컬 저장
-  - 오프라인/온라인 모드 전환
-  - 동기화 충돌 해결
-  - 네트워크 상태 감지
-
 ### 기본 GUI 개발 시작
 - [ ] 메인 애플리케이션 윈도우 구현
-  - 유연한 도킹 레이아웃
-  - 상태 표시줄 및 도구 모음
-  - 다중 창 지원 인프라
-  - 키보드 단축키 시스템
+  - Qt/PySide6 기반 메인 윈도우 레이아웃 구현
+  - 기본 메뉴 및 도구 모음 구성
+  - 설정 대화상자 및 기본 설정 기능 구현
+  - 다크 테마/라이트 테마 지원 기능 구현
+  - **윈도우 상태 및 레이아웃 데이터베이스 저장/복원**
+
 - [ ] 파일 및 폴더 탐색/선택 인터페이스
-  - 트리 기반 폴더 탐색기
-  - 파일 필터링 및 정렬 옵션
-  - 드래그 앤 드롭 지원
-  - 최근/즐겨찾기 위치 관리
+  - 파일 브라우저 위젯 구현
+  - 파일 필터링 기능 구현
+  - 드래그 앤 드롭 파일 업로드 지원
+  - 최근 폴더 기억 기능 구현
+  - **탐색 이력 및 즐겨찾기 폴더 데이터베이스 관리**
+
 - [ ] 파일 식별 및 처리 진행 상황 표시
-  - 실시간 진행률 표시
-  - 취소 및 일시 정지 기능
-  - 상세 작업 로그 뷰
-  - 배치 작업 관리 인터페이스
+  - 진행 상황 표시 대화상자 구현
+  - 취소 및 일시 정지 기능 지원
+  - 처리 로그 표시 및 오류 메시지 강조
+  - 비동기 처리를 위한 작업자 스레드 구현
+  - **작업 진행 상태 및 이력 데이터베이스 기록**
+
 - [ ] 기본 메타데이터 표시 화면
-  - 시리즈/에피소드 정보 레이아웃
-  - 이미지 및 포스터 표시
-  - 관련 정보 링크
-  - 데이터 편집 인터페이스
+  - 애니메이션 메타데이터 표시 위젯 구현
+  - 포스터 이미지 표시 지원
+  - 기본 정보 및 상세 정보 탭 구현
+  - 메타데이터 소스 선택 기능 구현
+  - **데이터베이스 기반 메타데이터 로드 및 캐싱**
+
 - [ ] 플러그인 관리 및 설정 인터페이스
-  - 설치된 플러그인 목록 및 상태 표시
-  - 플러그인 활성화/비활성화 컨트롤
-  - 플러그인별 설정 패널
-  - 우선순위 조정 인터페이스
-  - 플러그인 업데이트 관리 기능
+  - 플러그인 목록 표시 및 관리 위젯 구현
+  - 플러그인 활성화/비활성화 기능
+  - 플러그인 설정 대화상자 구현
+  - 새 플러그인 설치 인터페이스 구현
+  - **플러그인 설정 및 상태 데이터베이스 관리**
 
 ### 초기 통합 테스트
 - [ ] 핵심 모듈 유닛 테스트 작성
-  - 해시 계산 모듈 테스트
-  - API 클라이언트 테스트
-  - 파일 식별 모듈 테스트
-  - 플러그인 시스템 테스트
-  - 캐시 시스템 테스트
+  - 파일 감시 모듈 테스트
+  - 증분 스캐너 테스트
+  - 메타데이터 캐시 테스트
+  - 파일 식별 검증기 테스트
+  - **데이터베이스 액세스 레이어 테스트**
+
 - [ ] 파일 식별-메타데이터 수집 통합 테스트
-  - 전체 워크플로우 테스트
-  - 경계 사례 테스트
-  - 오류 시나리오 테스트
-  - 성능 병목 식별
+  - 다중 메타데이터 공급자 통합 테스트
+  - 충돌 해결 및 신뢰도 기반 선택 테스트
+  - 메타데이터 캐싱 통합 테스트
+  - 에피소드 번호 추출 테스트
+  - **메타데이터 데이터베이스 저장 및 조회 테스트**
+
 - [ ] 성능 테스트 프레임워크 구축
-  - 대규모 파일 셋 생성기
-  - 성능 메트릭 수집기
-  - 자동화된 벤치마크 스크립트
-  - 성능 리포트 생성기
+  - 대량 파일 처리 성능 측정 도구 구현
+  - 메모리 사용량 모니터링 기능 구현
+  - 처리 시간 분석 및 보고 기능 구현
+  - 병목 현상 진단 도구 구현
+  - **데이터베이스 쿼리 성능 및 최적화 테스트**
+
 - [ ] 로깅 시스템 구현 및 디버깅 개선
-  - 계층적 로깅 설정
-  - 로그 수준 조정 인터페이스
-  - 로그 파일 관리 및 회전
-  - 디버그 정보 수집기
+  - 계층적 로그 구조 설계
+  - 개발 및 프로덕션 로그 수준 분리
+  - 로그 파일 순환 및 백업 구현
+  - 디버그 정보 추출 도구 구현
+  - **중요 로그 이벤트 데이터베이스 저장**
+
+### 데이터베이스 GUI 통합 강화
+- [ ] 설정 관리 인터페이스 개발
+  - 데이터베이스 기반 설정 저장/로드 UI
+  - 설정 범주별 구성 인터페이스
+  - 설정 변경 실시간 반영 메커니즘
+  - 설정 프로필 관리 기능
+
+- [ ] 데이터베이스 기반 UI 상태 관리
+  - 윈도우 크기, 위치, 분할 상태 저장
+  - 사용자 정의 컬럼 및 정렬 설정 관리
+  - 세션 간 UI 상태 유지 메커니즘
+  - 다중 프로필 지원
+
+- [ ] 메타데이터 캐시 관리 인터페이스
+  - 캐시된 메타데이터 브라우저
+  - 캐시 관리 및 무효화 컨트롤
+  - 메타데이터 소스별 캐시 상태 표시
+  - 수동 메타데이터 업데이트 기능
+
+- [ ] 데이터베이스 유지관리 도구
+  - 데이터베이스 백업 및 복원 인터페이스
+  - 오래된 캐시 데이터 정리 도구
+  - 데이터베이스 최적화 기능
+  - 개발자 디버깅 쿼리 도구
 
 ## 예상 결과물
-- 메타데이터 플러그인 아키텍처 및 인터페이스 (플러그인 관리, 설정, 우선순위 조정 기능)
-- 완성된 TMDB API 플러그인 (인증, 검색, 상세 정보 조회, 에러 처리, 테스트 케이스)
-- 최적화된 파일 식별 시스템 (멀티스레딩, 캐싱, 보조 식별 로직)
-- 메타데이터 캐싱 시스템 (검색 기능, 오프라인 지원)
-- 기본 GUI 인터페이스 (설정, 파일 탐색, 메타데이터 표시, 플러그인 관리)
-- 테스트 및 로깅 프레임워크 (자동화된 테스트, 성능 측정, 로그 분석)
-- 통합 시스템 프로토타입 (모든 구현 모듈 연동 데모)
+- [ ] 기본 GUI 애플리케이션 (기본 기능 동작 가능한 버전)
+- [ ] 메타데이터 표시 컴포넌트 (애니메이션 정보 표시 기능)
+- [ ] 플러그인 관리 인터페이스 (플러그인 설치 및 관리 기능)
+- [ ] 통합 테스트 스위트 (주요 기능 통합 테스트)
+- [ ] 성능 테스트 리포트 (최적화 목표 설정을 위한 기준)
+- [ ] **설정 및 UI 상태의 데이터베이스 통합 구현**
+- [ ] **데이터베이스 기반 메타데이터 캐시 관리 시스템**
+- [ ] **데이터베이스 유지관리 및 최적화 도구**
 
 ## 위험 요소 및 대응 계획
-- **위험**: 대량 파일 처리 시 성능 저하
-  - **대응**: 점진적 처리, 백그라운드 작업 분리, 우선순위 큐 도입
-  - **검증 방법**: 1만 개 이상 파일 처리 성능 테스트, 메모리 사용량 모니터링
-- **위험**: TMDB API 변경 또는 제약 증가
-  - **대응**: 모듈화된 설계로 유연성 확보, 대체 플러그인 준비
-  - **검증 방법**: API 모의 서버로 다양한 오류 시나리오 테스트
-- **위험**: 플러그인 인터페이스 설계 불완전으로 인한 확장성 제한
-  - **대응**: 확장 가능한 인터페이스 설계, 버전 관리 메커니즘 포함
-  - **검증 방법**: 다양한 메타데이터 소스에 대한 모의 플러그인 구현 테스트
-- **위험**: GUI 응답성 저하 문제
-  - **대응**: 작업 스레드 분리, 비동기 업데이트, 점진적 UI 렌더링
-  - **검증 방법**: UI 응답 시간 측정, 프로파일링 및 병목 식별
+- **위험**: GUI 구현 시 플랫폼 간 호환성 문제
+  - **대응**: PySide6/Qt 위젯 사용 시 플랫폼 종속적인 기능 최소화
+  - **검증 방법**: Windows, macOS, Linux에서 주요 UI 기능 테스트
+
+- **위험**: 복잡한 메타데이터 표시 로직으로 인한 성능 저하
+  - **대응**: 메타데이터 표시 시 지연 로딩 및 캐싱 전략 도입
+  - **검증 방법**: 대량의 복잡한 메타데이터로 성능 테스트 수행
+
+- **위험**: 플러그인 인터페이스 설계 미흡으로 인한 확장성 제한
+  - **대응**: 잘 정의된 플러그인 API 및 문서화 제공
+  - **검증 방법**: 다양한 유형의 테스트 플러그인 개발 및 검증
+
+- **위험**: 데이터베이스 액세스 병목 현상으로 인한 UI 응답성 저하
+  - **대응**: 비동기 데이터베이스 액세스 및 캐싱 레이어 구현
+  - **검증 방법**: 대용량 데이터 환경에서 UI 응답성 테스트
+
+- **위험**: 설정 및 상태 데이터 동기화 문제
+  - **대응**: 트랜잭션 기반 설정 저장 및 변경 통지 메커니즘 구현
+  - **검증 방법**: 다중 컴포넌트 동시 설정 변경 시나리오 테스트
 
 ## 마일스톤
-- **주 3**: 메타데이터 플러그인 구조 설계 완료
-- **주 4**: TMDB API 클라이언트 완성 및 플러그인 구현
-- **주 6**: 파일 식별 모듈 최적화 완료
-- **주 8**: 메타데이터 캐싱 시스템 구현
-- **주 10**: 기본 GUI 프레임워크 및 플러그인 설정 UI 구현
-- **주 12**: 통합 테스트 및 3분기 프로토타입 완성 
+- **주 1-2**: 기본 GUI 창 및 파일 브라우저 구현, **데이터베이스 연동 설정**
+- **주 3-4**: 메타데이터 표시 컴포넌트 및 진행 상황 대화상자 구현, **UI 상태 데이터베이스 관리**
+- **주 5-6**: 플러그인 관리 인터페이스 구현, **플러그인 설정 데이터베이스 통합**
+- **주 7-8**: 통합 테스트 작성 및 실행, **데이터베이스 액세스 레이어 테스트**
+- **주 9-10**: 성능 테스트 및 최적화, **데이터베이스 쿼리 최적화**
+- **주 11-12**: 버그 수정 및 문서화, **데이터베이스 스키마 문서 업데이트** 
