--- a/docs/annual_reports/year1/Q4.md
+++ b/docs/annual_reports/year1/Q4.md
@@ -1,7 +1,7 @@
 # 애니메이션 파일 정리 애플리케이션 - 1년차 4분기 개발 계획
 
 ## 개발 목표
-1년차 4분기는 1년차 개발의 마무리 단계로, PySide6 GUI 프레임워크 구축과 메타데이터 플러그인 구조의 견고화 및 확장에 집중합니다. 특히 사용자가 설정에서 다양한 메타데이터 소스와 외부 서비스를 쉽게 선택하고 전환할 수 있는 유연한 플러그인 아키텍처를 완성합니다.
+1년차 4분기는 1년차 개발의 마무리 단계로, PySide6 GUI 프레임워크 구축과 메타데이터 플러그인 구조의 견고화 및 확장에 집중합니다. 특히 사용자가 설정에서 다양한 메타데이터 소스와 외부 서비스를 쉽게 선택하고 전환할 수 있는 유연한 플러그인 아키텍처를 완성합니다. **또한 1-3분기에 구축한 데이터베이스 중심 아키텍처를 완성하여, 모든 설정, 애플리케이션 상태, 메타데이터, 플러그인 데이터가 통합 데이터베이스에서 일관되게 관리되도록 합니다.**
 
 > **중요**: 모든 개발 단계에서 변경사항 적용 후 프로그램을 실행하여 기능이 정상적으로 작동하는지 확인해야 합니다. 어떤 변경이든 전체 시스템 안정성을 훼손해서는 안 됩니다.
 
@@ -13,31 +13,37 @@
   - 메인/서브 패널 구조 설계
   - 리사이즈 및 분할 패널 지원
   - 패널 상태 저장/복원 기능
+  - **레이아웃 설정 데이터베이스 저장 및 로드**
 - [ ] 파일 관리 및 탐색 컴포넌트 구현
   - 계층형 파일 브라우저 구현
   - 필터링 및 정렬 기능
   - 미리보기 패널 통합
   - 컨텍스트 메뉴 시스템
+  - **탐색 이력 및 즐겨찾기 데이터베이스 지원**
 - [ ] 메타데이터 표시 패널 구현
   - 시리즈/에피소드 정보 레이아웃
   - 이미지 및 포스터 갤러리
   - 상세 정보 확장/축소 UI
   - 인터랙티브 링크 및 참조
+  - **데이터베이스 저장 메타데이터 표시 최적화**
 - [ ] 사용자 설정 인터페이스 완성
   - 카테고리별 설정 트리
   - 실시간 설정 미리보기
   - 설정 검증 및 오류 표시
   - 기본값 복원 기능
+  - **설정 데이터베이스 동기화 및 충돌 해결**
 - [ ] 다크/라이트 테마 지원 및 스타일 시트 구현
   - 테마 전환 메커니즘
   - 색상 팔레트 정의 및 적용
   - 커스텀 위젯 스타일링
   - 접근성 고려한 대비 및 크기
+  - **테마 설정 데이터베이스 저장 및 로드**
 - [ ] 진행 상태 표시 및 백그라운드 작업 모니터링 UI
   - 글로벌 작업 큐 모니터
   - 작업별 진행 상황 표시
   - 취소/일시정지 컨트롤
   - 세부 상태 로그 뷰
+  - **작업 이력 및 상태 데이터베이스 추적**
 
 ### 고급 플러그인 시스템 구현
 - [ ] 통합 플러그인 관리 패널 개발
@@ -45,26 +51,31 @@
   - 플러그인 활성화/비활성화 컨트롤
   - 플러그인 상세 정보 및 설정 접근
   - 새 플러그인 설치 인터페이스
+  - **플러그인 메타데이터 및 상태 데이터베이스 관리**
 - [ ] 플러그인 의존성 및 충돌 관리 시스템
   - 의존성 그래프 분석 알고리즘
   - 버전 호환성 검사 강화
   - 충돌 감지 및 해결 메커니즘
   - 업그레이드 안전성 검증
+  - **의존성 및 호환성 정보 데이터베이스 저장**
 - [ ] 플러그인 이벤트 시스템 확장
   - 애플리케이션 이벤트 구독 메커니즘
   - 플러그인 간 이벤트 전파
   - 비동기 이벤트 처리 지원
   - 이벤트 로깅 및 모니터링
+  - **이벤트 구독 정보 데이터베이스 저장**
 - [ ] 플러그인 API 안정화 및 문서화
   - 공개 API 확정 및 버전 관리
   - 개발자 문서 및 튜토리얼 작성
   - 예제 플러그인 템플릿 제공
   - API 변경 관리 정책 수립
+  - **API 버전 및 호환성 정보 데이터베이스 관리**
 - [ ] 플러그인 자동 업데이트 메커니즘
   - 업데이트 확인 및 알림 시스템
   - 백그라운드 다운로드 및 설치
   - 롤백 및 복구 메커니즘
   - 업데이트 기록 관리
+  - **업데이트 이력 및 상태 데이터베이스 기록**
 
 ### 메타데이터 플러그인 아키텍처 완성
 - [ ] 메타데이터 플러그인 인터페이스 최종화
@@ -72,26 +83,31 @@
   - 확장 인터페이스 정의
   - 생명주기 메서드 정의
   - 이벤트 구독 메커니즘
+  - **인터페이스 통계 및 사용량 데이터베이스 추적**
 - [ ] TMDB API를 첫 번째 메타데이터 플러그인으로 리팩토링
   - 기존 코드 인터페이스 조정
   - 의존성 분리 및 격리
   - 테스트 케이스 마이그레이션
   - 설정 모듈 분리
+  - **메타데이터 캐시 데이터베이스 최적화**
 - [ ] 플러그인 로딩 및 관리 시스템 개선
   - 동적 플러그인 검색 및 로드
   - 버전 호환성 검사
   - 종속성 관리
   - 플러그인 활성화/비활성화
+  - **플러그인 로드 상태 데이터베이스 기록**
 - [ ] 플러그인 설정 저장 및 로드 메커니즘 강화
   - 플러그인별 설정 네임스페이스
   - 기본값 및 스키마 정의
   - 설정 변경 감지 및 적용
   - 설정 마이그레이션 지원
+  - **설정 스키마 및 변경 이력 데이터베이스 관리**
 - [ ] 메타데이터 플러그인 우선순위 및 선택 시스템 구현
   - 메타데이터 소스 우선순위 설정 UI
   - 메타데이터별 소스 선택 옵션
   - 자동/수동 모드 전환
   - 결과 신뢰도 평가 시스템
+  - **우선순위 및 선택 규칙 데이터베이스 저장**
 
 ### 추가 메타데이터 소스 플러그인 개발
 - [ ] TMDB API 플러그인 개선 및 기능 확장
@@ -99,26 +115,31 @@
   - 응답 파싱 및 오류 처리
   - 요청 직렬화 및 인코딩
   - API 버전 호환성 관리
+  - **메타데이터 캐시 데이터베이스 테이블 최적화**
 - [ ] 로컬 파일 메타데이터 플러그인 개발
   - 파일명 파싱 및 정보 추출 로직
   - NFO/XML 파일 지원
   - 내장 이미지 추출
   - 로컬 캐시 연동
+  - **로컬 메타데이터 데이터베이스 스키마 설계**
 - [ ] 더미 메타데이터 플러그인 구현 (테스트용)
   - 무작위 데이터 생성
   - 지연 및 오류 시뮬레이션
   - 메타데이터 일관성 검증
   - 성능 테스트 지원
+  - **테스트 데이터 생성 구성 데이터베이스 저장**
 - [ ] 메타데이터 통합 및 충돌 해결 시스템
   - 다중 소스 병합 알고리즘
   - 충돌 감지 및 해결 규칙
   - 사용자 선호도 반영
   - 데이터 품질 평가 메커니즘
+  - **병합 규칙 및 이력 데이터베이스 관리**
 - [ ] 플러그인 확장 가이드 및 샘플 작성
   - 개발자 가이드 문서화
   - 메타데이터 소스 통합 모범 사례
   - 코드 샘플 및 템플릿
   - 테스트 및 디버깅 방법론
+  - **플러그인 개발 보조 데이터 저장소 구현**
 
 ### 기본 파일 정리 기능 프로토타입
 - [ ] 폴더 구조 생성 로직 구현 (연도/분기/시리즈)
@@ -126,26 +147,53 @@
   - 폴더 이름 정규화
   - 존재하는 구조 분석 및 통합
   - 안전한 폴더 생성 로직
+  - **폴더 구조 템플릿 데이터베이스 관리**
 - [ ] 파일명 변경 및 이동 기본 로직 구현
   - 템플릿 기반 이름 변경
   - 충돌 감지 및 해결
   - 배치 작업 관리
   - 작업 진행 모니터링
+  - **파일명 템플릿 및 작업 이력 데이터베이스 저장**
 - [ ] 파일 작업 시뮬레이션 모드 구현
   - 변경 사항 미리보기
   - 영향 분석 리포트
   - 실행 전 검증
   - 시뮬레이션 결과 내보내기
+  - **시뮬레이션 설정 및 결과 데이터베이스 저장**
 - [ ] 파일 처리 이력 추적 및 복원 기능
   - 작업 로그 데이터베이스
   - 실행 취소(Undo) 메커니즘
   - 복원 지점 생성
   - 일괄 작업 롤백
+  - **복원 지점 및 작업 이력 데이터베이스 구현**
 - [ ] 자막 파일 등 관련 파일 일괄 처리 지원
   - 관련 파일 감지 규칙
   - 연결 유지 알고리즘
   - 자막 언어 감지
   - 메타파일 처리 규칙
+  - **관련 파일 매핑 데이터베이스 관리**
+
+### 데이터베이스 최적화 및 확장
+- [ ] 데이터베이스 스키마 최적화 및 성능 개선
+  - 인덱스 전략 최적화
+  - 쿼리 실행 계획 분석
+  - 자주 사용되는 쿼리 최적화
+  - 테이블 구조 최종 조정
+- [ ] 데이터베이스 마이그레이션 시스템 완성
+  - 버전 관리 메커니즘 구현
+  - 스키마 업그레이드 절차 완성
+  - 데이터 마이그레이션 유틸리티
+  - 롤백 및 복구 메커니즘
+- [ ] 데이터베이스 백업 및 복원 시스템
+  - 자동 백업 스케줄링
+  - 증분 백업 지원
+  - 복원 인터페이스 구현
+  - 데이터 무결성 검증
+- [ ] 데이터베이스 관리 도구 구현
+  - 유지보수 및 최적화 유틸리티
+  - 데이터 정리 및 압축 기능
+  - 성능 모니터링 인터페이스
+  - 개발자 디버깅 도구
 
 ### 1년차 개발 평가 및 2년차 계획 조정
 - [ ] 1년차 개발 성과 평가 및 문서화
@@ -153,26 +201,31 @@
   - 기능 완성도 평가
   - 코드 품질 평가
   - 주요 성과 및 교훈 문서화
+  - **데이터베이스 중심 아키텍처 효과성 평가**
 - [ ] 성능 및 사용성 테스트 실시
   - 대규모 라이브러리 처리 성능 측정
   - UI 응답성 테스트
   - 메모리 사용량 프로파일링
   - CPU/I/O 사용량 분석
+  - **데이터베이스 성능 벤치마크**
 - [ ] 사용자 피드백 초기 수집 (내부 테스터)
   - 테스트 그룹 구성
   - 사용성 테스트 시나리오 개발
   - 피드백 수집 및 분석
   - 우선순위 개선 도출
+  - **사용자 피드백 데이터베이스 저장 및 분석**
 - [ ] 2년차 개발 계획 상세화 및 우선순위 조정
   - 주요 기능 로드맵 재검토
   - 우선순위 매트릭스 작성
   - 분기별 목표 상세화
   - 리소스 할당 계획
+  - **데이터베이스 스키마 확장 계획 수립**
 - [ ] 기술적 부채 식별 및 해결 계획 수립
   - 코드 리팩토링 우선순위
   - 아키텍처 개선 계획
   - 테스트 커버리지 향상 전략
   - 문서화 개선 계획
+  - **데이터베이스 접근 레이어 최적화 계획**
 
 ## 예상 결과물
 - 완성된 기본 GUI 인터페이스 (다크/라이트 테마, 모듈식 패널, 설정 화면)
@@ -184,6 +237,9 @@
 - 1년차 개발 평가 보고서 (성과, 문제점, 교훈) 및 2년차 상세 계획
 - 내부 테스터 피드백 분석 및 개선 우선순위 목록
 - 최초 알파 버전 빌드 (내부 테스트용)
+- **완성된 데이터베이스 중심 아키텍처 (설정, 메타데이터, 상태 통합 관리)**
+- **데이터베이스 백업/복원 및 관리 도구**
+- **데이터베이스 성능 및 최적화 보고서**
 
 ## 위험 요소 및 대응 계획
 - **위험**: GUI와 백엔드 처리 간 반응성 저하
@@ -198,11 +254,17 @@
 - **위험**: 파일 처리 중 예상치 못한 오류로 인한 데이터 손실
   - **대응**: 트랜잭션 기반 파일 작업, 백업 메커니즘, 단계별 검증
   - **검증 방법**: 시스템 충돌 시뮬레이션, 복구 기능 테스트, 엣지 케이스 테스트
+- **위험**: 데이터베이스 성능 병목 현상으로 인한 전체 시스템 성능 저하
+  - **대응**: 비동기 데이터베이스 액세스, 계층적 캐싱, 쿼리 최적화, 커넥션 풀링
+  - **검증 방법**: 대용량 데이터셋에서 성능 테스트, 데이터베이스 접근 프로파일링
+- **위험**: 데이터베이스 스키마 변경으로 인한 호환성 문제
+  - **대응**: 강력한 마이그레이션 시스템, 버전 관리, 롤백 메커니즘
+  - **검증 방법**: 다양한 업그레이드 시나리오 테스트, 스키마 변경 자동화 테스트
 
 ## 마일스톤
-- **주 3**: PySide6 GUI 프레임워크 기본 구조 완성
-- **주 5**: 고급 플러그인 시스템 구현 완료
-- **주 7**: 메타데이터 플러그인 아키텍처 최종화 및 소스 전환 인터페이스 구현
-- **주 9**: 추가 메타데이터 소스 플러그인 및 기본 파일 정리 기능 구현
-- **주 11**: 통합 테스트 및 내부 사용자 피드백 수집
-- **주 13**: 1년차 평가 완료 및 2년차 계획 확정, 알파 빌드 배포 
+- **주 3**: PySide6 GUI 프레임워크 기본 구조 완성 및 **데이터베이스 연동 UI 구현**
+- **주 5**: 고급 플러그인 시스템 구현 완료 및 **플러그인 데이터 관리 데이터베이스 최적화**
+- **주 7**: 메타데이터 플러그인 아키텍처 최종화 및 소스 전환 인터페이스 구현, **메타데이터 데이터베이스 최적화**
+- **주 9**: 추가 메타데이터 소스 플러그인 및 기본 파일 정리 기능 구현, **파일 처리 이력 데이터베이스 구현**
+- **주 11**: 통합 테스트 및 내부 사용자 피드백 수집, **데이터베이스 성능 테스트**
+- **주 13**: 1년차 평가 완료 및 2년차 계획 확정, 알파 빌드 배포, **최종 데이터베이스 스키마 문서화** 
