--- a/docs/annual_reports/year2/Q1.md
+++ b/docs/annual_reports/year2/Q1.md
@@ -1,7 +1,7 @@
 # 애니메이션 파일 정리 애플리케이션 - 2년차 1분기 개발 계획
 
 ## 개발 목표
-2년차 1분기는 핵심 기능 구현 단계를 이어가며, 메타데이터 수집 및 파일 정리 기능 고도화에 집중합니다.
+2년차 1분기는 핵심 기능 구현 단계를 이어가며, 메타데이터 수집 및 파일 정리 기능 고도화에 집중합니다. **특히 1년차에 확립한 데이터베이스 중심 아키텍처를 활용하여 메타데이터와 파일 정리 관련 모든 정보를 데이터베이스에 효율적으로 저장, 관리, 활용하는 방안을 구현합니다.**
 
 > **중요**: 모든 개발 단계에서 변경사항 적용 후 프로그램을 실행하여 기능이 정상적으로 작동하는지 확인해야 합니다. 어떤 변경이든 전체 시스템 안정성을 훼손해서는 안 됩니다.
 
@@ -13,26 +13,31 @@
   - 소스별 우선순위 기반 스케줄링
   - 작업 취소 및 재개 메커니즘
   - 멀티스레딩 성능 튜닝
+  - **수집된 메타데이터의 데이터베이스 저장 성능 최적화**
 - [ ] 지연 로딩 및 필요시 로딩 전략 구현
   - 메타데이터 필드별 로딩 전략
   - 뷰 기반 선택적 로딩
   - 캐시 계층화 및 메모리 최적화
   - 백그라운드 프리로딩 알고리즘
+  - **데이터베이스에서 메타데이터 지연 로딩 및 캐싱 구현**
 - [ ] 식별 정확도 향상을 위한 휴리스틱 알고리즘 개선
   - 파일명 파싱 패턴 확장
   - 퍼지 매칭 알고리즘 구현
   - 신뢰도 점수 산출 개선
   - 머신러닝 기반 식별 조사(PoC)
+  - **식별 결과 및 신뢰도 점수 데이터베이스 저장**
 - [ ] 메타데이터 충돌 해결 정책 상세 구현
   - 필드별 병합 규칙 정의
   - 소스 우선순위 관리 시스템
   - 충돌 시각화 및 사용자 해결 UI
   - 자동/수동 해결 모드 전환
+  - **충돌 해결 규칙 및 이력 데이터베이스 관리**
 - [ ] 메타데이터 갱신 자동화 및 수동 트리거 기능
   - 시간 기반 갱신 스케줄러
   - 이벤트 기반 갱신 트리거
   - 배치 갱신 작업 관리자
   - 갱신 상태 모니터링 시스템
+  - **갱신 상태 및 이력 데이터베이스 기록**
 
 ### MyAnimeList/Jikan API 플러그인 개발
 - [ ] Jikan API 기본 연동 클래스 구현
@@ -40,26 +45,31 @@
   - 응답 파싱 및 캐싱
   - 오류 처리 및 재시도 로직
   - API 버전 관리 메커니즘
+  - **API 응답 캐싱을 위한 데이터베이스 스키마 설계 및 구현**
 - [ ] 애니메이션 검색 및 상세 정보 추출 로직 개발
   - 효율적인 검색 쿼리 구성
   - 결과 필터링 및 정렬
   - 페이지네이션 처리
   - 세부 정보 요청 최적화
+  - **검색 결과 데이터베이스 저장 및 관리**
 - [ ] 평점, 인기도, 장르 등 정보 파싱 및 저장
   - 필드 매핑 및 정규화
   - 로컬 데이터 모델 연동
   - 업데이트 충돌 감지 및 해결
   - 계산 통계 캐싱
+  - **파싱된 메타데이터의 데이터베이스 모델링 및 저장**
 - [ ] 결과 캐싱 및 요청 제한 준수 메커니즘
   - API 요청 제한 추적기
   - 지능형 요청 스케줄링
   - 캐시 무효화 정책
   - 대체 데이터 전략
+  - **데이터베이스 기반 캐싱 및 요청 제한 관리**
 - [ ] AniDB ID와 MAL ID 매핑 로직 개발
   - 매핑 테이블 구축 및 유지
   - 이름 기반 매칭 알고리즘
   - 사용자 정의 매핑 지원
   - 자동 매핑 검증 메커니즘
+  - **ID 매핑 정보 데이터베이스 저장 및 관리**
 
 ### 파일 정리 기능 고도화
 - [ ] 사용자 정의 파일명/폴더 패턴 지원 구현
@@ -67,26 +77,31 @@
   - 변수 기반 템플릿 시스템
   - 조건부 형식 지원
   - 패턴 검증 및 미리보기
+  - **파일명/폴더 패턴 데이터베이스 저장 및 관리**
 - [ ] 정리 작업 검증 및 예상 결과 미리보기 기능
   - 변경 시뮬레이션 엔진
   - 위험 작업 분석 및 경고
   - 충돌 및 중복 감지
   - 시각적 비교 도구
+  - **시뮬레이션 결과 데이터베이스 임시 저장 및 관리**
 - [ ] 병렬 처리 기반 대량 파일 정리 최적화
   - 작업 분할 알고리즘
   - I/O 병목 최소화 전략
   - 진행 상황 추적
   - 리소스 사용량 제한
+  - **병렬 작업 중 파일 상태 데이터베이스 업데이트**
 - [ ] 특수 케이스 처리 (OVA, 영화, 스페셜 등)
   - 컨텐츠 유형별 규칙 정의
   - 메타데이터 기반 분류 로직
   - 사용자 정의 분류 규칙
   - 예외 케이스 처리 방법
+  - **특수 케이스 처리 규칙 데이터베이스 저장**
 - [ ] 정리 작업 로그 및 롤백 메커니즘 강화
   - 트랜잭션 기반 파일 작업
   - 상세 작업 로그 데이터베이스
   - 선택적 롤백 기능
   - 작업 재시도 메커니즘
+  - **작업 이력 및 롤백 정보 데이터베이스 저장 및 관리 시스템 구현**
 
 ### GUI 기능 확장
 - [ ] 메타데이터 통합 뷰 개발 (여러 소스 정보 동시 표시)
@@ -94,26 +109,31 @@
   - 소스 간 비교 뷰
   - 필드별 통합 표시 옵션
   - 차이점 하이라이팅
+  - **데이터베이스에 저장된 통합 메타데이터 표시 UI 구현**
 - [ ] 파일 정리 시뮬레이션 결과 시각화
   - 이전/이후 트리 비교 뷰
   - 작업 유형별 색상 코딩
   - 드릴다운 상세 정보
   - 영향 요약 대시보드
+  - **데이터베이스 시뮬레이션 결과 로드 및 시각화**
 - [ ] 메타데이터 수동 편집 인터페이스
   - 인라인 편집 지원
   - 필드 유효성 검사
   - 변경 이력 관리
   - 대량 편집 도구
+  - **데이터베이스 메타데이터 직접 편집 및 저장 기능 구현**
 - [ ] 키보드 단축키 및 접근성 개선
   - 사용자 정의 단축키
   - 접근성 표준 준수
   - 스크린 리더 호환성
   - 키보드 내비게이션 최적화
+  - **사용자 정의 단축키 데이터베이스 저장**
 - [ ] 드래그 앤 드롭 지원 확장
   - 파일/폴더 드래그 앤 드롭
   - 메타데이터 연결 작업
   - 우선순위 재정렬
   - 시각적 피드백 개선
+  - **드래그앤 드롭 메타데이터 연결 결과 데이터베이스 업데이트**
 
 ### 성능 최적화 및 안정성 강화
 - [ ] 메모리 사용량 모니터링 및 최적화
@@ -121,34 +141,40 @@
   - 대형 객체 추적 및 관리
   - 메모리 누수 감지
   - 리소스 사용량 제한 메커니즘
+  - **데이터베이스 연결 풀 메모리 사용량 최적화**
 - [ ] 캐시 크기 관리 및 효율적 스토리지 사용
   - 캐시 사이즈 자동 조절
   - LRU/LFU 정책 구현
   - 디스크 공간 모니터링
   - 저사용 데이터 자동 정리
+  - **데이터베이스 캐시 테이블 관리 및 최적화**
 - [ ] 오류 처리 및 복구 메커니즘 강화
   - 강화된 예외 처리 계층
   - 우아한 실패 모드
   - 자동 복구 프로세스
   - 사용자 친화적 오류 안내
+  - **데이터베이스 트랜잭션 기반 오류 복구**
 - [ ] 로깅 시스템 개선 및 진단 도구 개발
   - 구조화된 로깅 구현
   - 로그 수준 동적 조정
   - 원격 로그 수집 옵션
   - 진단 정보 추출 도구
+  - **중요 시스템 및 데이터베이스 이벤트 로깅**
 - [ ] 대용량 라이브러리 처리 성능 테스트 및 개선
   - 벤치마크 스위트 개발
   - 성능 병목 분석
   - 확장성 테스트 (10만+ 파일)
   - 부하 테스트 자동화
+  - **데이터베이스 쿼리 성능 벤치마크 및 최적화**
 
 ## 예상 결과물
-- 고도화된 메타데이터 수집 시스템 (병렬 처리, 지연 로딩, 개선된 정확도)
-- MyAnimeList/Jikan API 플러그인 (완전 구현, 캐싱, ID 매핑)
-- 사용자 정의 파일 정리 시스템 (템플릿 기반, 시뮬레이션, 롤백 지원)
-- 향상된 GUI 인터페이스 (통합 뷰, 편집 기능, 접근성 개선)
-- 성능 및 안정성 개선 보고서 (벤치마크 결과, 최적화 권장사항)
+- 고도화된 메타데이터 수집 시스템 (병렬 처리, 지연 로딩, 개선된 정확도) - **데이터베이스 통합 완료**
+- MyAnimeList/Jikan API 플러그인 (완전 구현, 캐싱, ID 매핑) - **데이터베이스 기반 캐싱 및 매핑 구현**
+- 사용자 정의 파일 정리 시스템 (템플릿 기반, 시뮬레이션, 롤백 지원) - **작업 이력 및 설정 데이터베이스 관리 구현**
+- 향상된 GUI 인터페이스 (통합 뷰, 편집 기능, 접근성 개선) - **데이터베이스 기반 UI 상태 및 메타데이터 관리**
+- 성능 및 안정성 개선 보고서 (벤치마크 결과, 최적화 권장사항) - **데이터베이스 성능 분석 결과 포함**
 - 2년차 1분기 기능 데모 및 내부 사용자 테스트 피드백
+- **데이터베이스 스키마 마이그레이션 도구 개선**
 
 ## 위험 요소 및 대응 계획
 - **위험**: Jikan API 불안정성 또는 제한
@@ -160,10 +186,16 @@
 - **위험**: 병렬 처리로 인한 동시성 문제
   - **대응**: 스레드 안전 설계, 락 기반 리소스 관리, 데드락 방지 전략
   - **검증 방법**: 스트레스 테스트, 경쟁 조건 탐지 도구 사용, 장기 실행 안정성 테스트
+- **위험**: **데이터베이스 부하 증가 및 쿼리 성능 문제**
+  - **대응**: **데이터베이스 인덱스 최적화, 쿼리 튜닝, 비동기 데이터베이스 액세스 구현**
+  - **검증 방법**: **대용량 데이터셋에서 데이터베이스 작업 성능 벤치마크**
+- **위험**: **메타데이터 및 설정 데이터베이스 스키마 변경 관리 복잡성**
+  - **대응**: **자동 마이그레이션 시스템 강화, 스키마 변경 이력 관리**
+  - **검증 방법**: **다양한 스키마 변경 시나리오 테스트, 데이터 무결성 검증**
 
 ## 마일스톤
-- **주 3**: 메타데이터 수집 시스템 병렬 처리 및 지연 로딩 구현
-- **주 6**: MyAnimeList/Jikan API 플러그인 완성 및 통합
-- **주 9**: 사용자 정의 파일 정리 시스템 구현
-- **주 11**: GUI 기능 확장 및 성능 최적화 완료
-- **주 13**: 통합 테스트, 버그 수정 및 1분기 기능 릴리스 
+- **주 3**: 메타데이터 수집 시스템 병렬 처리 및 지연 로딩 구현, **데이터베이스 수집 데이터 저장 구현**
+- **주 6**: MyAnimeList/Jikan API 플러그인 완성 및 통합, **API 캐싱 및 매핑 데이터베이스 연동**
+- **주 9**: 사용자 정의 파일 정리 시스템 구현, **정리 작업 이력 및 설정 데이터베이스 관리 구현**
+- **주 11**: GUI 기능 확장 및 성능 최적화 완료, **UI 상태 및 메타데이터 표시 데이터베이스 연동**
+- **주 13**: 통합 테스트, 버그 수정 및 1분기 기능 릴리스, **데이터베이스 최종 점검 및 성능 보고** 
