--- a/docs/annual_reports/year2/Q2.md
+++ b/docs/annual_reports/year2/Q2.md
@@ -1,54 +1,64 @@
 # 애니메이션 파일 정리 애플리케이션 - 2년차 2분기 개발 계획
 
 ## 개발 목표
-2년차 2분기는 핵심 기능 구현의 완성 단계로, 파일 정리 기본 기능 완성과 UI/UX 개선에 집중합니다.
+2년차 2분기는 핵심 기능 구현의 완성 단계로, 파일 정리 기본 기능 완성과 UI/UX 개선에 집중하며, 모든 메타데이터, 설정 및 저장 데이터를 관리하는 데이터베이스 시스템 통합을 진행합니다.
+
+> **중요**: 모든 개발 단계에서 변경사항 적용 후 프로그램을 실행하여 기능이 정상적으로 작동하는지 확인해야 합니다. 어떤 변경이든 전체 시스템 안정성을 훼손해서는 안 됩니다.
 
 ## 주요 작업 항목
 
 ### 파일 정리 기본 기능 완성
 - [ ] 다양한 형식의 파일 이름 패턴 인식 알고리즘 구현
-- [ ] 파일 및 폴더 정리 작업 최종 구현
+- [ ] 파일 및 폴더 정리 작업 최종 구현 (정리 결과 및 메타데이터 데이터베이스 저장 포함)
 - [ ] 대용량 처리에서 안정적인 동작 보장
 - [ ] 일괄 작업 및 개별 작업 지원
-- [ ] 정리 작업 진행 상황 실시간 모니터링 기능
+- [ ] 정리 작업 진행 상황 실시간 모니터링 기능 (데이터베이스 연동)
 
 ### UI/UX 개선
 - [ ] 사용자 경험 최적화 및 워크플로우 개선
-- [ ] 직관적인 작업 진행 상황 표시
-- [ ] 결과 보고서 및 요약 뷰 구현
+- [ ] 직관적인 작업 진행 상황 표시 (데이터베이스 상태 반영)
+- [ ] 결과 보고서 및 요약 뷰 구현 (데이터베이스 기반)
 - [ ] 오류 및 경고 메시지 개선
 - [ ] UI 반응성 최적화
 
 ### 플러그인 간 메타데이터 통합 개선
 - [ ] 메타데이터 통합 알고리즘 최종 구현
 - [ ] 충돌 해결 전략 완성 및 사용자 설정 제공
-- [ ] 우선순위 기반 데이터 선택 메커니즘
+- [ ] 우선순위 기반 데이터 선택 메커니즘 (데이터베이스 관리)
 - [ ] 사용자 정의 커스터마이징 옵션 제공
-- [ ] 메타데이터 필드별 소스 추적 기능
+- [ ] 메타데이터 필드별 소스 추적 기능 (데이터베이스 지원)
 
 ### 설정 및 환경설정 시스템 고도화
-- [ ] 통합 설정 관리 시스템 구현
-- [ ] 설정 프로필 저장 및 로드 기능
+- [ ] 통합 설정 관리 시스템 구현 (데이터베이스 기반)
+- [ ] 설정 프로필 저장 및 로드 기능 (데이터베이스 활용)
 - [ ] 고급 설정 옵션 확장
 - [ ] 설정 내보내기/가져오기 기능
-- [ ] 기본값 및 사용자 정의 값 관리
+- [ ] 기본값 및 사용자 정의 값 관리 (데이터베이스 연동)
 
 ### 초기 사용자 테스트 및 피드백 수집
-- [ ] 내부 테스트 및 버그 수정
+- [ ] 내부 테스트 및 버그 수정 (데이터베이스 통합 포함)
 - [ ] 사용성 테스트 계획 및 실행
 - [ ] 테스트 사용자 피드백 수집 메커니즘 구현
 - [ ] 주요 버그 및 개선 요청 분석 및 우선순위 지정
 - [ ] 2년차 후반 개발 계획 조정
 
 ## 예상 결과물
-- 완성된 파일 정리 기본 기능
-- 개선된 사용자 인터페이스 및 경험
-- 고도화된 메타데이터 통합 시스템
-- 확장된 설정 시스템
+- 완성된 파일 정리 기본 기능 (데이터베이스와 통합된)
+- 개선된 사용자 인터페이스 및 경험 (데이터베이스 기반 정보 표시)
+- 고도화된 메타데이터 통합 시스템 (데이터베이스 중심 관리)
+- 확장된 설정 시스템 (데이터베이스 저장)
 - 초기 사용자 테스트 피드백 보고서
 
 ## 위험 요소 및 대응 계획
 - **위험**: 복잡한 파일 정리 작업 중 예상치 못한 오류
   - **대응**: 보수적 접근법, 단계별 확인, 롤백 메커니즘 강화
 - **위험**: 사용자 피드백에 따른 대규모 디자인 변경 요구
-  - **대응**: 모듈화된 설계 유지, 핵심 기능과 UI 분리, 변경 우선순위 평가 
+  - **대응**: 모듈화된 설계 유지, 핵심 기능과 UI 분리, 변경 우선순위 평가
+- **위험**: 데이터베이스 설계 오류 또는 성능 문제 발생
+  - **대응**: 설계 단계에서 충분한 검토 및 프로토타이핑, 성능 테스트 강화, 데이터 모델 변경 유연성 확보
+  - **검증 방법**: 부하 테스트 수행, 데이터 무결성 검증 루틴 개발, 성능 지표 모니터링
+
+## 마일스톤
+- 중간 마일스톤 1: 핵심 기능 구현 완료
+- 중간 마일스톤 2: 데이터베이스 통합 완료
+- 중간 마일스톤 3: 초기 사용자 테스트 완료 
