--- a/docs/annual_reports/year2/Q3.md
+++ b/docs/annual_reports/year2/Q3.md
@@ -1,7 +1,9 @@
 # 애니메이션 파일 정리 애플리케이션 - 2년차 3분기 개발 계획
 
 ## 개발 목표
-2년차 3분기는 기능 확장 단계로 진입하여 AniList GraphQL API 통합 및 고급 폴더 정리 규칙 구현에 집중합니다.
+2년차 3분기는 기능 확장 단계로 진입하여 AniList GraphQL API 통합 및 고급 폴더 정리 규칙 구현에 집중하며, 모든 데이터를 중앙 데이터베이스 시스템을 통해 관리하는 체계를 더욱 공고히 합니다.
+
+> **중요**: 모든 개발 단계에서 변경사항 적용 후 프로그램을 실행하여 기능이 정상적으로 작동하는지 확인해야 합니다. 어떤 변경이든 전체 시스템 안정성을 훼손해서는 안 됩니다.
 
 ## 주요 작업 항목
 
@@ -11,7 +13,8 @@
 - [ ] 주요 쿼리 템플릿 구현 (시리즈, 에피소드, 캐릭터 정보)
 - [ ] 복잡한 GraphQL 쿼리 관리 시스템 구현
 - [ ] 요청 제한 관리 및 캐싱 전략 구현
-- [ ] AniDB, MAL ID와 AniList ID 매핑 로직
+- [ ] AniDB, MAL ID와 AniList ID 매핑 로직 (데이터베이스 저장 및 활용)
+- [ ] AniList에서 가져온 메타데이터 데이터베이스 저장 및 관리
 
 ### 고급 폴더 정리 규칙 및 사용자 정의 템플릿
 - [ ] 템플릿 언어/문법 설계 및 구현
@@ -19,39 +22,48 @@
 - [ ] 정규표현식 기반 파일명 처리 기능
 - [ ] 템플릿 변수 및 함수 지원 (날짜 포맷, 대소문자 변환 등)
 - [ ] 템플릿 미리보기 및 유효성 검사 기능
-- [ ] 사용자 템플릿 저장, 불러오기, 공유 기능
+- [ ] 사용자 템플릿 데이터베이스 저장, 불러오기, 공유 기능
 
 ### 메타데이터 통합 및 충돌 처리 고도화
 - [ ] 지능형 메타데이터 병합 알고리즘 구현
-- [ ] 소스별 데이터 신뢰도 지표 도입
-- [ ] 사용자 정의 우선순위 규칙 설정 기능
-- [ ] 메타데이터 필드별 소스 추적 및 전환 기능
-- [ ] 이미지 자료 (포스터, 스크린샷) 통합 관리
+- [ ] 소스별 데이터 신뢰도 지표 도입 (데이터베이스 저장)
+- [ ] 사용자 정의 우선순위 규칙 설정 기능 (데이터베이스 관리)
+- [ ] 메타데이터 필드별 소스 추적 및 전환 기능 (데이터베이스 지원)
+- [ ] 이미지 자료 (포스터, 스크린샷) 데이터베이스 통합 관리
 - [ ] 다국어 메타데이터 지원 (일본어, 영어, 한국어)
 
 ### 배치 작업 및 자동화 기능
 - [ ] 폴더 감시 및 자동 처리 기능 구현
-- [ ] 작업 스케줄링 및 예약 실행 기능
-- [ ] 배치 작업 관리 및 모니터링 인터페이스
-- [ ] 작업 결과 로그 및 통계 기능
-- [ ] 배치 작업 정의 및 재사용 기능
+- [ ] 작업 스케줄링 및 예약 실행 기능 (데이터베이스 활용)
+- [ ] 배치 작업 관리 및 모니터링 인터페이스 (데이터베이스 기반)
+- [ ] 작업 결과 로그 및 통계 기능 (데이터베이스 저장)
+- [ ] 배치 작업 정의 및 재사용 기능 (데이터베이스 저장)
 
 ### 프로파일 및 동시 작업 관리
-- [ ] 사용자 프로파일 개념 도입 및 구현
-- [ ] 작업 그룹 및 동시 작업 관리 기능
-- [ ] 자원 사용량 모니터링 및 제한 기능
-- [ ] 작업 간 의존성 관리 및 순서 지정 기능
-- [ ] 프로파일별 설정 및 환경 관리
+- [ ] 사용자 프로파일 개념 도입 및 구현 (데이터베이스 저장)
+- [ ] 작업 그룹 및 동시 작업 관리 기능 (데이터베이스 기반)
+- [ ] 자원 사용량 모니터링 및 제한 기능 (데이터베이스 연동)
+- [ ] 작업 간 의존성 관리 및 순서 지정 기능 (데이터베이스 관리)
+- [ ] 프로파일별 설정 및 환경 관리 (데이터베이스 저장)
 
 ## 예상 결과물
-- AniList GraphQL API 플러그인
-- 고급 폴더 정리 템플릿 시스템
-- 메타데이터 통합 관리 개선 기능
-- 배치 작업 및 자동화 시스템
-- 사용자 프로파일 관리 시스템
+- AniList GraphQL API 플러그인 (데이터베이스 연동)
+- 고급 폴더 정리 템플릿 시스템 (데이터베이스 저장)
+- 메타데이터 통합 관리 개선 기능 (데이터베이스 중심)
+- 배치 작업 및 자동화 시스템 (데이터베이스 활용)
+- 사용자 프로파일 관리 시스템 (데이터베이스 기반)
 
 ## 위험 요소 및 대응 계획
 - **위험**: GraphQL 쿼리 복잡성 및 성능 문제
   - **대응**: 쿼리 최적화, 결과 캐싱, 점진적 로딩 전략 구현
+  - **검증 방법**: 성능 테스트, 쿼리 프로파일링
 - **위험**: 복잡한 사용자 템플릿으로 인한 오류 가능성
-  - **대응**: 템플릿 유효성 검사, 안전모드 실행, 상세 오류 보고 
+  - **대응**: 템플릿 유효성 검사, 안전모드 실행, 상세 오류 보고
+  - **검증 방법**: 다양한 템플릿 테스트, 사용자 테스트 피드백 수집
+- **위험**: 데이터베이스 스키마 변경에 따른 데이터 마이그레이션 문제
+  - **대응**: 스키마 변경 관리 도구 활용, 하위 호환성 유지 노력, 데이터 마이그레이션 테스트 자동화
+  - **검증 방법**: 마이그레이션 스크립트 테스트, 실제 데이터 기반 검증
+
+## 마일스톤
+- **주 X**: [마일스톤 이름] - [완료 기준 명시]
+- **주 Y**: [마일스톤 이름] - [완료 기준 명시] 
