--- a/docs/annual_reports/year2/Q4.md
+++ b/docs/annual_reports/year2/Q4.md
@@ -1,7 +1,9 @@
 # 애니메이션 파일 정리 애플리케이션 - 2년차 4분기 개발 계획
 
 ## 개발 목표
-2년차 4분기는 미디어 플레이어 연동 및 시청 기록 관리 시스템 구현을 통해 사용자 경험을 확장합니다.
+2년차 4분기는 미디어 플레이어 연동 및 시청 기록 관리 시스템 구현을 통해 사용자 경험을 확장합니다. **이 과정에서 시청 기록 및 관련 상태 정보를 중앙 데이터베이스에 안정적으로 저장하고 관리하는 시스템을 완성합니다.**
+
+> **중요**: 모든 개발 단계에서 변경사항 적용 후 프로그램을 실행하여 기능이 정상적으로 작동하는지 확인해야 합니다. 어떤 변경이든 전체 시스템 안정성을 훼손해서는 안 됩니다.
 
 ## 주요 작업 항목
 
@@ -12,14 +14,17 @@
 - [ ] 플레이어 이벤트 모니터링 시스템 구현
 - [ ] 외부 실행 모드 및 IPC 통신 구현
 - [ ] 사용자 지정 플레이어 설정 지원
+- [ ] **플레이어 상태 및 시청 시간 데이터베이스 연동 로직 구현**
 
 ### 시청 기록 관리 시스템
-- [ ] 시청 기록 데이터 모델 구현 및 데이터베이스 연동
+- [ ] 시청 기록 데이터 모델 구현 및 **데이터베이스 스키마 설계**
 - [ ] 재생 시간 및 진행도 추적 알고리즘
 - [ ] 재생 완료 판정 로직 (시간 기반, 이벤트 기반)
-- [ ] 다중 장치/환경에서의 시청 기록 동기화 고려
-- [ ] 시청 기록 수동 편집 인터페이스
-- [ ] 기록 백업 및 복원 기능
+- [ ] 다중 장치/환경에서의 시청 기록 동기화 고려 (데이터베이스 기반)
+- [ ] 시청 기록 수동 편집 인터페이스 (데이터베이스 연동)
+- [ ] 기록 백업 및 복원 기능 (데이터베이스 백업/복원 활용)
+- [ ] **시청 기록 데이터베이스 CRUD (Create, Read, Update, Delete) 기능 구현**
+- [ ] **시청 기록 조회 및 통계 기능 (데이터베이스 쿼리 활용)**
 
 ### 컨텍스트 메뉴 및 통합 작업
 - [ ] 파일 탐색기 컨텍스트 메뉴 통합 설계
@@ -28,6 +33,7 @@
 - [ ] 미디어 재생 관련 컨텍스트 메뉴 항목 추가
 - [ ] 시청 기록 관련 컨텍스트 액션 구현
 - [ ] 사용자 정의 액션 및 단축키 지원
+- [ ] **데이터베이스 저장된 파일 정보 및 시청 기록 기반 컨텍스트 메뉴 동적 생성**
 
 ### UI/UX 테마 지원 확장
 - [ ] 다크/라이트 테마 완성
@@ -36,6 +42,7 @@
 - [ ] 색상 체계 및 시각적 일관성 개선
 - [ ] 반응형 레이아웃 최적화
 - [ ] 사용자 정의 UI 요소 배치 지원
+- [ ] **사용자 UI/UX 설정 데이터베이스 저장 및 동기화**
 
 ### 2년차 개발 평가 및 3년차 계획 조정
 - [ ] 2년차 개발 성과 평가 및 문서화
@@ -43,16 +50,36 @@
 - [ ] 3년차 개발 계획 상세화 및 우선순위 조정
 - [ ] 기술적 부채 해결 계획 수립
 - [ ] 중간 버전 릴리스 준비 및 검토
+- [ ] **데이터베이스 성능 평가 및 최적화 결과 반영**
+- [ ] **시청 기록 데이터베이스 마이그레이션 계획 수립 및 실행 (필요 시)**
 
 ## 예상 결과물
 - 미디어 플레이어 연동 모듈 (VLC, MPV 지원)
-- 시청 기록 관리 시스템
+- 시청 기록 관리 시스템 (**데이터베이스 기반 구현 및 관리 기능 포함**)
 - 확장된 컨텍스트 메뉴 및 작업
-- 개선된 UI/UX 테마 시스템
+- 개선된 UI/UX 테마 시스템 (**데이터베이스 설정 저장 및 동기화 포함**)
 - 2년차 평가 보고서 및 3년차 계획
+- **시청 기록 데이터베이스 스키마, 관리 도구 및 마이그레이션 스크립트**
 
 ## 위험 요소 및 대응 계획
 - **위험**: 다양한 미디어 플레이어 버전 간 호환성 문제
   - **대응**: 버전 감지 및 분기 처리, 핵심 기능 중심 연동, 대체 방법 제공
+  - **검증 방법**: 다양한 플레이어 버전에서 테스트 수행
 - **위험**: 시청 기록 관리의 정확성 문제
-  - **대응**: 다중 방식 진행도 추적, 사용자 수동 확인 옵션, 신뢰도 지표 도입 
+  - **대응**: 다중 방식 진행도 추적, 사용자 수동 확인 옵션, 신뢰도 지표 도입
+  - **검증 방법**: 다양한 시청 시나리오 테스트, 사용자 피드백 수렴
+- **위험**: **시청 기록 데이터베이스 부하 증가로 인한 성능 저하**
+  - **대응**: **데이터베이스 인덱싱 최적화, 쿼리 튜닝, 캐싱 전략 도입**
+  - **검증 방법**: 부하 테스트 수행, 성능 프로파일링
+- **위험**: **다중 장치 시청 기록 동기화 시 데이터 충돌/손실 위험**
+  - **대응**: **명확한 동기화 규칙 정의, 타임스탬프/버전 관리, 충돌 해결 정책 수립**
+  - **검증 방법**: 다중 장치 환경에서 동기화 테스트 반복 수행
+- **위험**: **데이터베이스 스키마 변경 시 기존 시청 기록 데이터 마이그레이션 문제**
+  - **대응**: **마이그레이션 스크립트 개발 및 테스트, 데이터 백업 절차 마련**
+  - **검증 방법**: 다양한 스키마 변경 시나리오에 대한 마이그레이션 테스트
+
+## 마일스톤
+- **주 X**: [마일스톤 이름] - [완료 기준 명시]
+- **주 Y**: [마일스톤 이름] - [완료 기준 명시]
+
+ 
