--- a/docs/annual_reports/year3/Q1.md
+++ b/docs/annual_reports/year3/Q1.md
@@ -1,59 +1,70 @@
 # 애니메이션 파일 정리 애플리케이션 - 3년차 1분기 개발 계획
 
 ## 개발 목표
-3년차 1분기는 시청 기록 통계 및 분석 기능 개발과 즐겨찾기 시스템 구현에 집중합니다.
+3년차 1분기는 시청 기록 통계 및 분석 기능 개발과 즐겨찾기 시스템 구현에 집중하며, 이러한 기능에 필요한 모든 데이터를 **중앙 데이터베이스**를 통해 효율적으로 관리하고 활용하는 체계를 구축합니다.
+
+> **중요**: 모든 개발 단계에서 변경사항 적용 후 프로그램을 실행하여 기능이 정상적으로 작동하는지 확인해야 합니다. 어떤 변경이든 전체 시스템 안정성을 훼손해서는 안 됩니다.
 
 ## 주요 작업 항목
 
 ### 시청 기록 통계 및 분석 기능
-- [ ] 시청 통계 데이터 모델 및 계산 엔진 구현
-- [ ] 기본 통계 지표 구현 (총 시청 시간, 시리즈별 시청 비율 등)
-- [ ] 시간 기반 분석 (일간, 주간, 월간, 연간 패턴)
-- [ ] 장르/태그 기반 선호도 분석
-- [ ] 시청 속도 및 완료율 통계
-- [ ] 애니메이션 방영 시즌 기반 통계
+- [ ] 시청 통계 데이터 모델 및 계산 엔진 구현 (**데이터베이스 쿼리 및 집계 활용**)
+- [ ] 기본 통계 지표 구현 (총 시청 시간, 시리즈별 시청 비율 등) (**데이터베이스 기반 통계 계산**)
+- [ ] 시간 기반 분석 (일간, 주간, 월간, 연간 패턴) (**데이터베이스 시계열 데이터 분석**)
+- [ ] 장르/태그 기반 선호도 분석 (**데이터베이스 관계 활용**)
+- [ ] 시청 속도 및 완료율 통계 (**데이터베이스 저장 데이터 기반**)
+- [ ] 애니메이션 방영 시즌 기반 통계 (**데이터베이스 메타데이터 연동**)
 
 ### 시청 패턴 시각화
 - [ ] 차트 및 그래프 라이브러리 통합
-- [ ] 시청 기록 타임라인 시각화
-- [ ] 장르/태그 기반 선호도 시각화 (파이/바 차트)
-- [ ] 시청 활동 히트맵 (요일/시간별)
-- [ ] 완료/미완료 작품 시각화
-- [ ] 사용자 정의 보고서 생성 기능
+- [ ] 시청 기록 타임라인 시각화 (**데이터베이스 시계열 데이터 활용**)
+- [ ] 장르/태그 기반 선호도 시각화 (파이/바 차트) (**데이터베이스 통계 결과 시각화**)
+- [ ] 시청 활동 히트맵 (요일/시간별) (**데이터베이스 시청 시간 데이터 활용**)
+- [ ] 완료/미완료 작품 시각화 (**데이터베이스 상태 정보 활용**)
+- [ ] 사용자 정의 보고서 생성 기능 (**데이터베이스 쿼리 빌더 연동**)
 
 ### 즐겨찾기 및 시리즈 관리 시스템
-- [ ] 즐겨찾기 데이터 모델 및 관리 기능 구현
-- [ ] 다양한 즐겨찾기 분류 지원 (사용자 정의 카테고리)
-- [ ] 평점 및 리뷰 시스템 구현
-- [ ] 우선 순위 및 시청 예정 목록 관리
-- [ ] 외부 서비스 연동 준비 (MAL/AniList 연계)
-- [ ] 즐겨찾기 기반 작품 추천 기초 알고리즘
+- [ ] 즐겨찾기 데이터 모델 및 관리 기능 구현 (**데이터베이스 저장 및 관리**)
+- [ ] 다양한 즐겨찾기 분류 지원 (사용자 정의 카테고리) (**데이터베이스 구조 설계**)
+- [ ] 평점 및 리뷰 시스템 구현 (**데이터베이스 저장 및 연동**)
+- [ ] 우선 순위 및 시청 예정 목록 관리 (**데이터베이스 상태 관리**)
+- [ ] 외부 서비스 연동 준비 (MAL/AniList 연계) (**데이터베이스 ID 매핑 활용**)
+- [ ] 즐겨찾기 기반 작품 추천 기초 알고리즘 (**데이터베이스 시청/선호 데이터 활용**)
 
 ### 알림 및 일정 관리
 - [ ] 알림 시스템 기본 구조 구현
-- [ ] 방영 중인 애니메이션 새 에피소드 알림
-- [ ] 시청 중인 시리즈 상태 알림
-- [ ] 사용자 정의 알림 및 일정 관리
+- [ ] 방영 중인 애니메이션 새 에피소드 알림 (**데이터베이스 시청 상태 및 방영 정보 활용**)
+- [ ] 시청 중인 시리즈 상태 알림 (**데이터베이스 상태 변화 감지**)
+- [ ] 사용자 정의 알림 및 일정 관리 (**데이터베이스 저장**)
 - [ ] Windows 알림 센터 통합
-- [ ] 외부 캘린더 프로그램 연계 (iCal 포맷 등)
+- [ ] 외부 캘린더 프로그램 연계 (iCal 포맷 등) (**데이터베이스 일정 데이터 내보내기**)
 
 ### 사용자 경험 개선 및 안정화
-- [ ] 성능 최적화 (대규모 라이브러리 처리)
+- [ ] 성능 최적화 (대규모 라이브러리 처리) (**데이터베이스 쿼리 및 인덱싱 최적화**)
 - [ ] 메모리 사용량 최적화
 - [ ] UI 응답성 개선
-- [ ] 오류 처리 및 복구 메커니즘 강화
+- [ ] 오류 처리 및 복구 메커니즘 강화 (**데이터베이스 트랜잭션 및 백업 활용**)
 - [ ] 사용자 피드백 기반 버그 수정
 - [ ] 사용성 테스트 및 개선
 
 ## 예상 결과물
-- 시청 기록 통계 및 분석 시스템
-- 통계 시각화 대시보드
-- 즐겨찾기 및 시리즈 관리 시스템
-- 알림 및 일정 관리 기능
-- 성능 및 안정성 개선된 릴리스
+- 시청 기록 통계 및 분석 시스템 (**데이터베이스 기반 통계/분석 엔진 포함**)
+- 통계 시각화 대시보드 (**데이터베이스 데이터 활용**)
+- 즐겨찾기 및 시리즈 관리 시스템 (**데이터베이스 기반 구현**)
+- 알림 및 일정 관리 기능 (**데이터베이스 연동**)
+- 성능 및 안정성 개선된 릴리스 (**데이터베이스 최적화 결과 반영**)
 
 ## 위험 요소 및 대응 계획
 - **위험**: 대량의 통계 데이터 처리 성능 이슈
-  - **대응**: 점진적 계산, 캐싱, 백그라운드 처리 구현
+  - **대응**: 점진적 계산, 캐싱, 백그라운드 처리 구현 (**데이터베이스 성능 튜닝 병행**)
+  - **검증 방법**: 부하 테스트, 데이터베이스 쿼리 응답 시간 측정
 - **위험**: 복잡한 시각화 구현 난이도
-  - **대응**: 검증된 차트 라이브러리 활용, 단계적 구현 접근 
+  - **대응**: 검증된 차트 라이브러리 활용, 단계적 구현 접근
+  - **검증 방법**: 사용자 테스트를 통한 시각화 효과 및 성능 검증
+- **위험**: 시청 기록 및 즐겨찾기 데이터베이스 스키마 변경 시 마이그레이션 문제
+  - **대응**: 스키마 변경 관리 도구 및 절차 수립, 마이그레이션 스크립트 개발 및 테스트
+  - **검증 방법**: 다양한 스키마 변경 시나리오에 대한 마이그레이션 테스트 자동화
+
+## 마일스톤
+- **주 X**: [마일스톤 이름] - [완료 기준 명시]
+- **주 Y**: [마일스톤 이름] - [완료 기준 명시] 
