--- a/docs/annual_reports/year3/Q2.md
+++ b/docs/annual_reports/year3/Q2.md
@@ -1,60 +1,71 @@
 # 애니메이션 파일 정리 애플리케이션 - 3년차 2분기 개발 계획
 
 ## 개발 목표
-3년차 2분기는 기본 추천 시스템 개발과 사용자 인터페이스 개선 및 테마 지원 확장에 집중합니다.
+3년차 2분기는 기본 추천 시스템 개발과 사용자 인터페이스 개선 및 테마 지원 확장에 집중하며, 이러한 기능들이 중앙 데이터베이스를 통해 **안정적으로 데이터를 활용하고 관리**할 수 있도록 시스템을 고도화합니다.
+
+> **중요**: 모든 개발 단계에서 변경사항 적용 후 프로그램을 실행하여 기능이 정상적으로 작동하는지 확인해야 합니다. 어떤 변경이든 전체 시스템 안정성을 훼손해서는 안 됩니다.
 
 ## 주요 작업 항목
 
 ### 기본 추천 시스템 개발
-- [ ] 추천 시스템 기본 아키텍처 설계
-- [ ] 사용자 시청 기록 기반 추천 알고리즘 구현
-- [ ] 장르/태그 유사성 기반 추천 구현
-- [ ] 작품 인기도 및 평점 기반 추천
-- [ ] 외부 서비스 추천 데이터 통합 (MAL, AniList)
-- [ ] 추천 결과 표시 및 설명 인터페이스
-- [ ] 사용자 피드백 기반 추천 개선 메커니즘
+- [ ] 추천 시스템 기본 아키텍처 설계 (**데이터베이스 연동 고려**)
+- [ ] 사용자 시청 기록 기반 추천 알고리즘 구현 (**데이터베이스 시청 기록 활용**)
+- [ ] 장르/태그 유사성 기반 추천 구현 (**데이터베이스 메타데이터 및 관계 활용**)
+- [ ] 작품 인기도 및 평점 기반 추천 (**데이터베이스 저장 데이터 기반**)
+- [ ] 외부 서비스 추천 데이터 통합 (MAL, AniList) (**데이터베이스 ID 매핑 및 외부 데이터 저장**)
+- [ ] 추천 결과 표시 및 설명 인터페이스 (데이터베이스 쿼리 결과 사용)
+- [ ] 사용자 피드백 기반 추천 개선 메커니즘 (**데이터베이스 피드백 저장 및 분석**)
 
 ### UI/UX 개선 및 테마 지원
 - [ ] 고급 UI 컴포넌트 라이브러리 개발
 - [ ] 애니메이션 및 전환 효과 개선
 - [ ] 반응형 및 크기 조절 가능 레이아웃 구현
-- [ ] 고급 테마 시스템 구현 (사용자 정의 테마)
+- [ ] 고급 테마 시스템 구현 (사용자 정의 테마) (**데이터베이스 테마 설정 저장**)
 - [ ] 접근성 기능 확장 (키보드 네비게이션, 스크린 리더 지원)
 - [ ] 다양한 화면 크기 및 해상도 최적화
 
 ### 메타데이터 관리 고급 기능
-- [ ] 메타데이터 일괄 편집 도구 개발
-- [ ] 메타데이터 추출 및 내보내기 기능
-- [ ] 외부 미디어 관리 도구와 호환성 개선
-- [ ] 작품 관계 정보 관리 (시퀄, 프리퀄, 외전 등)
-- [ ] 맞춤형 메타데이터 필드 지원
-- [ ] 고급 검색 및 필터링 기능 강화
+- [ ] 메타데이터 일괄 편집 도구 개발 (**데이터베이스 일괄 업데이트 기능**)
+- [ ] 메타데이터 추출 및 내보내기 기능 (**데이터베이스 쿼리 및 내보내기**)
+- [ ] 외부 미디어 관리 도구와 호환성 개선 (데이터베이스 스키마 설계)
+- [ ] 작품 관계 정보 관리 (시퀄, 프리퀄, 외전 등) (**데이터베이스 관계형 모델 설계**)
+- [ ] 맞춤형 메타데이터 필드 지원 (**데이터베이스 스키마 확장성 고려**)
+- [ ] 고급 검색 및 필터링 기능 강화 (**데이터베이스 인덱싱 및 쿼리 최적화**)
 
 ### 대규모 라이브러리 최적화
 - [ ] 대규모 애니메이션 라이브러리 처리 성능 개선
-- [ ] 데이터베이스 인덱싱 및 쿼리 최적화
-- [ ] 지연 로딩 및 페이지네이션 구현
-- [ ] 캐시 관리 시스템 개선
-- [ ] 백그라운드 작업 스케줄러 최적화
+- [ ] 데이터베이스 인덱싱 및 쿼리 최적화 (**핵심 작업**)
+- [ ] 지연 로딩 및 페이지네이션 구현 (데이터베이스 쿼리 최적화)
+- [ ] 캐시 관리 시스템 개선 (데이터베이스 데이터 캐싱 전략)
+- [ ] 백그라운드 작업 스케줄러 최적화 (**데이터베이스 작업 상태 관리**)
 - [ ] 메모리 사용량 모니터링 및 최적화
 
 ### 플러그인 구조 개선
 - [ ] 플러그인 관리 인터페이스 개선
-- [ ] 플러그인 검색 및 설치 메커니즘 구현
-- [ ] 플러그인 의존성 관리 시스템 개선
-- [ ] 플러그인 버전 호환성 검사 기능
+- [ ] 플러그인 검색 및 설치 메커니즘 구현 (데이터베이스 플러그인 정보 저장)
+- [ ] 플러그인 의존성 관리 시스템 개선 (**데이터베이스 의존성 정보 관리**)
+- [ ] 플러그인 버전 호환성 검사 기능 (데이터베이스 버전 정보 활용)
 - [ ] 플러그인 개발 문서 및 SDK 준비
-- [ ] 커뮤니티 플러그인 지원 기반 마련
+- [ ] 커뮤니티 플러그인 지원 기반 마련 (**데이터베이스 확장성 고려**)
 
 ## 예상 결과물
-- 기본 추천 시스템
-- 개선된 UI/UX 및 테마 시스템
-- 고급 메타데이터 관리 도구
-- 대규모 라이브러리 최적화
-- 향상된 플러그인 시스템
+- 기본 추천 시스템 (**데이터베이스 연동 및 데이터 활용 포함**)
+- 개선된 UI/UX 및 테마 시스템 (**데이터베이스 테마 설정 저장 포함**)
+- 고급 메타데이터 관리 도구 (**데이터베이스 일괄 처리 및 내보내기 포함**)
+- 대규모 라이브러리 최적화 (**데이터베이스 성능 최적화 결과 반영**)
+- 향상된 플러그인 시스템 (**데이터베이스 기반 플러그인 정보 관리**)
 
 ## 위험 요소 및 대응 계획
 - **위험**: 추천 시스템 정확도 및 품질 확보 어려움
   - **대응**: 단계적 접근, 사용자 피드백 고리 구축, A/B 테스트 고려
+  - **검증 방법**: 사용자 그룹 대상 추천 결과 만족도 평가
 - **위험**: 대규모 라이브러리에서 UI 성능 저하
-  - **대응**: 가상화된 리스트, 지연 로딩, 백그라운드 처리 강화 
+  - **대응**: 가상화된 리스트, 지연 로딩, 백그라운드 처리 강화 (**데이터베이스 쿼리 최적화 병행**)
+  - **검증 방법**: 대용량 데이터 환경에서 UI 응답 시간 측정
+- **위험**: 데이터베이스 설계 변경으로 인한 추천, 메타데이터, 플러그인 기능 영향
+  - **대응**: 스키마 변경 관리 절차 수립, 데이터 마이그레이션 계획, 모듈 간 인터페이스 명확화
+  - **검증 방법**: 스키마 변경 시 관련 기능 회귀 테스트 자동화, 마이그레이션 테스트
+
+## 마일스톤
+- **주 X**: [마일스톤 이름] - [완료 기준 명시]
+- **주 Y**: [마일스톤 이름] - [완료 기준 명시] 
