--- a/docs/annual_reports/year1/Q1.md
+++ b/docs/annual_reports/year1/Q1.md
@@ -1,102 +1,132 @@
 # 애니메이션 파일 정리 애플리케이션 - 1년차 1분기 개발 계획
 
 ## 개발 목표
-1년차 1분기는 프로젝트 초기 단계로, 기본 비전을 정립하고 핵심 기술 스택을 결정합니다. 특히 모든 외부 API와 데이터베이스 연동을 플러그인 방식으로 구현하여 높은 확장성과 유연성을 갖춘 아키텍처를 설계합니다.
+1년차 1분기는 프로젝트 초기 단계로, 기본 비전을 정립하고 핵심 기술 스택을 결정합니다. 특히 모든 외부 API와 데이터베이스 연동을 플러그인 방식으로 구현하여 높은 확장성과 유연성을 갖춘 아키텍처를 설계합니다. **모든 메타 정보, 설정, 필요한 저장 데이터는 일관된 관리와 접근을 위해 데이터베이스에 저장하는 전략을 채택합니다.**
 
 > **중요**: 모든 개발 단계에서 변경사항 적용 후 프로그램을 실행하여 기능이 정상적으로 작동하는지 확인해야 합니다. 어떤 변경이든 전체 시스템 안정성을 훼손해서는 안 됩니다.
 
 ## 주요 작업 항목
 
 ### 프로젝트 비전 및 요구사항 정의
-- [x] 프로젝트 범위 및 핵심 목표 정의
+- [ ] 프로젝트 범위 및 핵심 목표 정의
   - 애니메이션 파일 정리 기능 정의
   - 메타데이터 통합 범위 설정
   - 사용자 편의성 목표 설정
   - 플러그인 기반 아키텍처 비전 수립
-- [x] 주요 기능 요구사항 상세 문서화
+  - **데이터베이스 중심 데이터 관리 전략 수립**
+- [ ] 주요 기능 요구사항 상세 문서화
   - 파일 감지 및 식별 요구사항
   - 메타데이터 수집 요구사항
   - 파일 정리 및 이름 변경 요구사항
   - 사용자 인터페이스 요구사항
   - 플러그인 관리 요구사항
-- [x] 사용자 페르소나 및 주요 사용 사례 정의
+  - **설정 및 메타데이터 데이터베이스 저장 요구사항**
+- [ ] 사용자 페르소나 및 주요 사용 사례 정의
   - 주 사용자층 정의 및 니즈 분석
   - 핵심 사용 시나리오 10개 이상 도출
   - 다양한 메타데이터 소스 활용 시나리오
-- [x] 기술적 제약조건 및 비기능적 요구사항 정의
+- [ ] 기술적 제약조건 및 비기능적 요구사항 정의
   - 성능 요구사항 (대용량 파일 처리 속도)
   - 안정성 및 오류 처리 요구사항
   - 확장성 요구사항
   - 플러그인 개발 편의성 요구사항
+  - **데이터베이스 성능 및 확장성 요구사항**
 
 ### 시스템 아키텍처 초기 설계
-- [x] 전체 시스템 아키텍처 설계 (모듈 구조도)
+- [ ] 전체 시스템 아키텍처 설계 (모듈 구조도)
   - 코어 모듈 정의
   - 플러그인 시스템 설계
-  - 데이터 저장소 구조 설계
-- [x] 주요 컴포넌트 간 인터페이스 정의
+  - **통합 데이터베이스 저장소 구조 설계**
+- [ ] 주요 컴포넌트 간 인터페이스 정의
   - 모듈 간 API 설계
   - 이벤트 기반 통신 구조 정의
   - 플러그인 인터페이스 초안 작성
-- [x] 데이터 흐름 다이어그램 작성
+  - **데이터베이스 액세스 레이어 설계**
+- [ ] 데이터 흐름 다이어그램 작성
   - 파일 감지부터 정리까지 데이터 흐름
   - 메타데이터 수집 및 저장 흐름
   - 플러그인 간 데이터 교환 흐름
-- [x] 확장성 고려한 설계 접근법 수립
+  - **설정 및 메타데이터 데이터베이스 저장 흐름**
+- [ ] 확장성 고려한 설계 접근법 수립
   - 플러그인 아키텍처 상세 설계
   - 향후 기능 확장을 위한 인터페이스 설계
   - 플러그인 확장 포인트 정의
+  - **데이터베이스 스키마 확장성 설계**
 
 ### 핵심 기술 스택 조사 및 선정
-- [x] GUI 프레임워크 조사 및 PySide6 적합성 평가
+- [ ] GUI 프레임워크 조사 및 PySide6 적합성 평가
   - 최소 3개 이상 프레임워크 벤치마킹
   - 성능, 문서화, 커뮤니티 지원 비교
   - 플러그인 UI 통합 가능성 평가
-- [x] 데이터베이스 옵션 조사 및 SQLite 검증
+- [ ] 데이터베이스 옵션 조사 및 SQLite 검증
   - 로컬 데이터베이스 3개 이상 벤치마킹
   - 대용량 데이터 처리 성능 비교
   - 플러그인 데이터 저장 전략 검토
-- [x] ORM 라이브러리 조사 및 SQLAlchemy 선정 검토
+  - **애플리케이션 설정 데이터베이스 저장 접근법 평가**
+  - **메타데이터 저장 최적화 전략 연구**
+  - **트랜잭션 및 데이터 무결성 전략 수립**
+- [ ] ORM 라이브러리 조사 및 SQLAlchemy 선정 검토
   - 최소 2개 이상 ORM 라이브러리 비교
   - 코드 복잡성 및 유지보수성 평가
   - 플러그인 데이터 모델 확장성 검토
-- [x] 네트워킹 및 API 관련 라이브러리 조사
+  - **플러그인별 테이블 네임스페이스 관리 전략**
+- [ ] 네트워킹 및 API 관련 라이브러리 조사
   - HTTP 클라이언트 라이브러리 비교
   - 비동기 요청 처리 옵션 검토
   - 다양한 API 연동을 위한 추상화 방안
-- [x] 파일 시스템 감시 라이브러리 조사
+  - **API 응답 캐싱 데이터베이스 설계**
+- [ ] 파일 시스템 감시 라이브러리 조사
   - Watchdog 및 대안 라이브러리 평가
   - OS별 동작 일관성 검증
 
 ### 플러그인 아키텍처 조사 및 설계
-- [x] 기존 Python 플러그인 시스템 연구
+- [ ] 기존 Python 플러그인 시스템 연구
   - 주요 Python 플러그인 프레임워크 분석
   - 장단점 및 적용 가능성 평가
   - 참조 구현 검토
-- [x] 플러그인 발견 및 로딩 메커니즘 설계
+- [ ] 플러그인 발견 및 로딩 메커니즘 설계
   - 플러그인 패키지 구조 정의
   - 메타데이터 형식 결정
   - 동적 로딩 방식 선정
-- [x] 플러그인 인터페이스 초안 설계
+- [ ] 플러그인 인터페이스 초안 설계
   - 주요 확장점 식별
   - 공통 인터페이스 정의
   - 타입 힌트 및 문서화 전략
-- [x] 플러그인 설정 관리 방안 연구
-  - 설정 저장 및 로드 메커니즘
+- [ ] 플러그인 설정 관리 방안 연구
+  - **플러그인 설정의 데이터베이스 저장 및 로드 메커니즘**
+  - **플러그인별 데이터 테이블 설계**
   - UI 통합 방식 설계
   - 기본값 및 스키마 검증 방안
 
 ### 핵심 알고리즘 조사
-- [x] ED2K 해시 계산 알고리즘 연구
+- [ ] ED2K 해시 계산 알고리즘 연구
   - 최적화된 구현 방법 조사
   - 멀티스레딩 구현 가능성 검토
-- [x] 파일 식별 방법론 조사
+- [ ] 파일 식별 방법론 조사
   - 해시 기반 식별 외 대안 방법 조사
   - 부분 파일 매칭 가능성 연구
-- [x] 메타데이터 API 연동 방식 조사
+  - **해시 및 파일 메타데이터 데이터베이스 저장 구조 설계**
+- [ ] 메타데이터 API 연동 방식 조사
   - TMDB API 문서 분석
   - 요청 제한 및 처리 전략 수립
   - 다양한 메타데이터 소스 통합 방안
+  - **메타데이터 캐싱 및 저장 데이터베이스 스키마 설계**
+
+### 데이터베이스 통합 전략 수립
+- [ ] 주요 데이터베이스 테이블 스키마 초안 설계
+  - 애플리케이션 설정 테이블 구조
+  - 메타데이터 저장 테이블 구조
+  - 파일 정보 및 해시 테이블 구조
+  - 플러그인 데이터 저장소 구조
+  - 작업 이력 및 로그 테이블 구조
+- [ ] 데이터베이스 마이그레이션 전략 수립
+  - 스키마 업데이트 접근법
+  - 버전 관리 메커니즘
+  - 데이터 마이그레이션 처리
+- [ ] 데이터베이스 성능 최적화 전략
+  - 인덱싱 계획
+  - 쿼리 최적화 방안
+  - 대용량 데이터 처리 접근법
 
 ## 예상 결과물
 - 프로젝트 요구사항 명세서 (최소 20페이지)
@@ -104,6 +134,7 @@
 - 플러그인 아키텍처 설계 문서 (인터페이스 정의, 확장점, 예제 코드)
 - 기술 스택 선정 보고서 (비교 매트릭스 포함)
 - 핵심 알고리즘 연구 보고서 (성능 테스트 결과 포함)
+- **데이터베이스 스키마 설계 문서 (ERD, 테이블 정의, 관계 설명)**
 - 초기 프로토타입 코드 (핵심 알고리즘 구현)
 
 ## 위험 요소 및 대응 계획
@@ -119,3 +150,6 @@
 - **위험**: 플러그인 인터페이스 설계 불완전으로 인한 제약
   - **대응**: 충분한 사용 사례 연구 및 유연한 인터페이스 설계
   - **검증 방법**: 다양한 메타데이터 소스에 대한 개념 증명 구현
+- **위험**: 데이터베이스 스키마 설계 불완전으로 인한 확장성 제약
+  - **대응**: 유연한 스키마 설계 및 마이그레이션 전략 수립
+  - **검증 방법**: 다양한 데이터 시나리오에 대한 모델 테스트
